修复：操你妈

--- a/docs/article/也好传.md
+++ b/docs/article/也好传.md
@@ -8,39 +8,39 @@
 
 # 你啥也不懂他啥都会
 
-![descript](others\也好传\20240217202310_0.png)
+![descript](/others/也好传/20240217202310_0.png)
 
-![descript](others\也好传\20240217202310_1.png)
+![descript](/others/也好传/20240217202310_1.png)
 
 然后他说
 
 # 写代码有手就行
 
-![descript](others\也好传\20240217202310_2.png)
+![descript](/others/也好传/20240217202310_2.png)
 
-![descript](others\也好传\20240217202310_3.png)
+![descript](/others/也好传/20240217202310_3.png)
 
 # 他是美国AI
 
-![descript](others\也好传\20240217202310_4.png)
+![descript](/others/也好传/20240217202310_4.png)
 
-![descript](others\也好传\20240217202310_5.png)
+![descript](/others/也好传/20240217202310_5.png)
 
-![descript](others\也好传\20240217202310_6.png)
+![descript](/others/也好传/20240217202310_6.png)
 
-![descript](others\也好传\20240217202310_7.png)
+![descript](/others/也好传/20240217202310_7.png)
 
 # 我是杠精
 
 呜呜呜对不起，我不该擅自成精
 
-![descript](others\也好传\20240217202310_8.png)
+![descript](/others/也好传/20240217202310_8.png)
 
 # 不服打我服务器
 
 我实在不知道为什么能突然转到这个
 
-![descript](others\也好传\20240217202310_9.png)
+![descript](/others/也好传/20240217202310_9.png)
 
 # 你很牛逼是吧？
 
@@ -48,59 +48,59 @@
 
 我看不懂，前面艾特群主说你没能力不如chatGPT 这就变脸了?
 
-![descript](others\也好传\20240217202310_10.png)
+![descript](/others/也好传/20240217202310_10.png)
 
 # 出题出题
 
-![descript](others\也好传\20240217202310_11.png)
+![descript](/others/也好传/20240217202310_11.png)
 
-![descript](others\也好传\20240217202310_12.png)
+![descript](/others/也好传/20240217202310_12.png)
 
-![descript](others\也好传\20240217202310_13.png)
+![descript](/others/也好传/20240217202310_13.png)
 
 # 你笑你🐎比
 
-![descript](others\也好传\20240217202310_14.png)
+![descript](/others/也好传/20240217202310_14.png)
 
-![descript](others\也好传\20240217202310_15.png)
+![descript](/others/也好传/20240217202310_15.png)
 
 # chatGPT没答对一个
 
-![descript](others\也好传\20240217202310_16.png)
+![descript](/others/也好传/20240217202310_16.png)
 
-![descript](others\也好传\20240217202310_17.png)
+![descript](/others/也好传/20240217202310_17.png)
 
-![descript](others\也好传\20240217202310_18.png)
+![descript](/others/也好传/20240217202310_18.png)
 
-![descript](others\也好传\20240217202310_19.png)
+![descript](/others/也好传/20240217202310_19.png)
 
 # 第二次也就对了一个点
 
-![descript](others\也好传\20240217202310_20.png)
+![descript](/others/也好传/20240217202310_20.png)
 
-![descript](others\也好传\20240217202310_21.png)
+![descript](/others/也好传/20240217202310_21.png)
 
-![descript](others\也好传\20240217202310_22.png)
+![descript](/others/也好传/20240217202310_22.png)
 
-![descript](others\也好传\20240217202310_23.png)
+![descript](/others/也好传/20240217202310_23.png)
 
-![descript](others\也好传\20240217202310_24.png)
+![descript](/others/也好传/20240217202310_24.png)
 
-![descript](others\也好传\20240217202310_25.png)
+![descript](/others/也好传/20240217202310_25.png)
 
-![descript](others\也好传\20240217202310_26.png)
+![descript](/others/也好传/20240217202310_26.png)
 
 巧了这一篇就是JavaScript的乐子
 
-![descript](others\也好传\20240217202310_27.png)
+![descript](/others/也好传/20240217202310_27.png)
 
-![descript](others\也好传\20240217202310_28.png)
+![descript](/others/也好传/20240217202310_28.png)
 
-![descript](others\也好传\20240217202310_29.png)
+![descript](/others/也好传/20240217202310_29.png)
 
-![descript](others\也好传\20240217202310_30.png)
+![descript](/others/也好传/20240217202310_30.png)
 
-![descript](others\也好传\20240217202310_31.png)
+![descript](/others/也好传/20240217202310_31.png)
 
-![descript](others\也好传\20240217202310_32.png)
+![descript](/others/也好传/20240217202310_32.png)
 
