--- a/docs/article/影传.md
+++ b/docs/article/影传.md
@@ -6,7 +6,7 @@
 
 影曾用号：
 
-![descript](\others\影传\20240217201426_0.jpeg)![descript](\others\影传\20240217201426_0.jpeg)
+![descript](/others/影传/20240217201426_0.jpeg)![descript](/others/影传/20240217201426_0.jpeg)
 
 # 乐子系列丛书导言
 
@@ -14,275 +14,275 @@
 
 随便看能找到一个像他这样的算我输
 
-![descript](\others\影传\20240217201426_1.jpeg)
+![descript](/others/影传/20240217201426_1.jpeg)
 
 # 2023\-9\-16
 
 ## 开始
 
-![descript](\others\影传\20240217201426_2.png)
+![descript](/others/影传/20240217201426_2.png)
 
 ## 为什么spigot会有插件要钱
 
-![descript](\others\影传\20240217201426_3.png)
+![descript](/others/影传/20240217201426_3.png)
 
-![descript](\others\影传\20240217201426_4.png)
+![descript](/others/影传/20240217201426_4.png)
 
-![descript](\others\影传\20240217201426_5.png)
+![descript](/others/影传/20240217201426_5.png)
 
-![descript](\others\影传\20240217201426_6.png)
+![descript](/others/影传/20240217201426_6.png)
 
-![descript](\others\影传\20240217201426_7.png)
+![descript](/others/影传/20240217201426_7.png)
 
 ## 怎么配置
 
-![descript](\others\影传\20240217201426_8.png)
+![descript](/others/影传/20240217201426_8.png)
 
 你说有没有可能，在mcbbs帖子内
 
-![descript](\others\影传\20240217201426_9.png)
+![descript](/others/影传/20240217201426_9.png)
 
-![descript](\others\影传\20240217201426_10.png)
+![descript](/others/影传/20240217201426_10.png)
 
 ## 《哪个傻逼想出来的》
 
-![descript](\others\影传\20240217201426_11.png)
+![descript](/others/影传/20240217201426_11.png)
 
-![descript](\others\影传\20240217201426_12.png)
+![descript](/others/影传/20240217201426_12.png)
 
-![descript](\others\影传\20240217201426_13.png)
+![descript](/others/影传/20240217201426_13.png)
 
 ## github太麻烦了
 
-![descript](\others\影传\20240217201426_14.png)
+![descript](/others/影传/20240217201426_14.png)
 
-![descript](\others\影传\20240217201426_15.png)
+![descript](/others/影传/20240217201426_15.png)
 
 ## 想嫖现成的端
 
-![descript](\others\影传\20240217201426_16.png)
+![descript](/others/影传/20240217201426_16.png)
 
 ## 震惊\!geyser开源\!
 
-![descript](\others\影传\20240217201426_17.png)
+![descript](/others/影传/20240217201426_17.png)
 
-![descript](\others\影传\20240217201426_18.png)
+![descript](/others/影传/20240217201426_18.png)
 
-![descript](\others\影传\20240217201426_19.png)
+![descript](/others/影传/20240217201426_19.png)
 
-![descript](\others\影传\20240217201426_20.png)
+![descript](/others/影传/20240217201426_20.png)
 
-![descript](\others\影传\20240217201426_21.png)
+![descript](/others/影传/20240217201426_21.png)
 
-![descript](\others\影传\20240217201426_22.png)
+![descript](/others/影传/20240217201426_22.png)
 
-![descript](\others\影传\20240217201426_23.png)
+![descript](/others/影传/20240217201426_23.png)
 
-![descript](\others\影传\20240217201426_24.png)
+![descript](/others/影传/20240217201426_24.png)
 
-![descript](\others\影传\20240217201426_25.png)
+![descript](/others/影传/20240217201426_25.png)
 
-![descript](\others\影传\20240217201426_26.png)
+![descript](/others/影传/20240217201426_26.png)
 
-![descript](\others\影传\20240217201426_27.png)
+![descript](/others/影传/20240217201426_27.png)
 
 ## ia这么贵有人买?
 
-![descript](\others\影传\20240217201426_28.png)
+![descript](/others/影传/20240217201426_28.png)
 
-![descript](\others\影传\20240217201426_29.png)
+![descript](/others/影传/20240217201426_29.png)
 
-![descript](\others\影传\20240217201426_30.png)
+![descript](/others/影传/20240217201426_30.png)
 
 ## 默米三件套是什么
 
-![descript](\others\影传\20240217201426_31.png)
+![descript](/others/影传/20240217201426_31.png)
 
-![descript](\others\影传\20240217201426_32.png)
+![descript](/others/影传/20240217201426_32.png)
 
-![descript](\others\影传\20240217201426_33.png)
+![descript](/others/影传/20240217201426_33.png)
 
-![descript](\others\影传\20240217201426_34.png)
+![descript](/others/影传/20240217201426_34.png)
 
-![descript](\others\影传\20240217201426_35.png)
+![descript](/others/影传/20240217201426_35.png)
 
 ## 再问一次有啥用
 
-![descript](\others\影传\20240217201426_36.png)
+![descript](/others/影传/20240217201426_36.png)
 
-![descript](\others\影传\20240217201426_37.png)
+![descript](/others/影传/20240217201426_37.png)
 
 ## 再再问一次有啥用
 
-![descript](\others\影传\20240217201426_38.png)
+![descript](/others/影传/20240217201426_38.png)
 
-![descript](\others\影传\20240217201426_39.png)
+![descript](/others/影传/20240217201426_39.png)
 
 ## 再再再问一次有啥用
 
-![descript](\others\影传\20240217201426_40.png)
+![descript](/others/影传/20240217201426_40.png)
 
-![descript](\others\影传\20240217201426_41.png)
+![descript](/others/影传/20240217201426_41.png)
 
-![descript](\others\影传\20240217201426_42.png)
+![descript](/others/影传/20240217201426_42.png)
 
 ## 一听见钱就发6
 
-![descript](\others\影传\20240217201426_43.png)
+![descript](/others/影传/20240217201426_43.png)
 
-![descript](\others\影传\20240217201426_44.png)
+![descript](/others/影传/20240217201426_44.png)
 
-![descript](\others\影传\20240217201426_45.png)
+![descript](/others/影传/20240217201426_45.png)
 
 ## 为什么打码
 
-![descript](\others\影传\20240217201426_46.png)
+![descript](/others/影传/20240217201426_46.png)
 
-![descript](\others\影传\20240217201426_47.png)
+![descript](/others/影传/20240217201426_47.png)
 
 ## 全给盖住累死我了
 
-![descript](\others\影传\20240217201426_48.jpeg)
+![descript](/others/影传/20240217201426_48.jpeg)
 
 # 2023\-9\-17
 
 ## ia
 
-![descript](\others\影传\20240217201426_49.png)
+![descript](/others/影传/20240217201426_49.png)
 
-![descript](\others\影传\20240217201426_50.png)
+![descript](/others/影传/20240217201426_50.png)
 
-![descript](\others\影传\20240217201426_51.png)
+![descript](/others/影传/20240217201426_51.png)
 
-![descript](\others\影传\20240217201426_52.png)
+![descript](/others/影传/20240217201426_52.png)
 
-![descript](\others\影传\20240217201426_53.png)
+![descript](/others/影传/20240217201426_53.png)
 
-![descript](\others\影传\20240217201426_54.png)
+![descript](/others/影传/20240217201426_54.png)
 
-![descript](\others\影传\20240217201426_55.png)
+![descript](/others/影传/20240217201426_55.png)
 
-![descript](\others\影传\20240217201426_56.png)
+![descript](/others/影传/20240217201426_56.png)
 
-![descript](\others\影传\20240217201426_57.jpeg)
+![descript](/others/影传/20240217201426_57.jpeg)
 
-![descript](\others\影传\20240217201426_58.png)
+![descript](/others/影传/20240217201426_58.png)
 
-![descript](\others\影传\20240217201426_59.png)
+![descript](/others/影传/20240217201426_59.png)
 
 ## 真就填公网啊
 
-![descript](\others\影传\20240217201426_60.jpeg)
+![descript](/others/影传/20240217201426_60.jpeg)
 
-![descript](\others\影传\20240217201426_61.png)
+![descript](/others/影传/20240217201426_61.png)
 
-![descript](\others\影传\20240217201426_62.png)
+![descript](/others/影传/20240217201426_62.png)
 
-![descript](\others\影传\20240217201426_63.png)
+![descript](/others/影传/20240217201426_63.png)
 
-![descript](\others\影传\20240217201426_64.png)
+![descript](/others/影传/20240217201426_64.png)
 
 ## 不玩原神导致的
 
-![descript](\others\影传\20240217201426_65.png)
+![descript](/others/影传/20240217201426_65.png)
 
 ## 好好好给你码
 
-![descript](\others\影传\20240217201426_66.png)
+![descript](/others/影传/20240217201426_66.png)
 
-![descript](\others\影传\20240217201426_67.png)
+![descript](/others/影传/20240217201426_67.png)
 
 ## 管你是不是真的
 
-![descript](\others\影传\20240217201426_68.png)
+![descript](/others/影传/20240217201426_68.png)
 
-![descript](\others\影传\20240217201426_69.png)
+![descript](/others/影传/20240217201426_69.png)
 
-![descript](\others\影传\20240217201426_70.png)
+![descript](/others/影传/20240217201426_70.png)
 
-![descript](\others\影传\20240217201426_71.png)
+![descript](/others/影传/20240217201426_71.png)
 
-![descript](\others\影传\20240217201426_72.png)
+![descript](/others/影传/20240217201426_72.png)
 
-![descript](\others\影传\20240217201426_73.png)
+![descript](/others/影传/20240217201426_73.png)
 
-![descript](\others\影传\20240217201426_74.png)
+![descript](/others/影传/20240217201426_74.png)
 
 ## 五百块买E5
 
-![descript](\others\影传\20240217201426_75.png)
+![descript](/others/影传/20240217201426_75.png)
 
-![descript](\others\影传\20240217201426_76.png)
+![descript](/others/影传/20240217201426_76.png)
 
-![descript](\others\影传\20240217201426_77.png)
+![descript](/others/影传/20240217201426_77.png)
 
-![descript](\others\影传\20240217201426_78.png)
+![descript](/others/影传/20240217201426_78.png)
 
-![descript](\others\影传\20240217201426_79.png)
+![descript](/others/影传/20240217201426_79.png)
 
 ## 原神56级
 
-![descript](\others\影传\20240217201426_80.png)
+![descript](/others/影传/20240217201426_80.png)
 
 ## 第一次问权限节点
 
-![descript](\others\影传\20240217201426_81.png)
+![descript](/others/影传/20240217201426_81.png)
 
 ## 我没长脑子你就长了?
 
-![descript](\others\影传\20240217201426_82.png)
+![descript](/others/影传/20240217201426_82.png)
 
-![descript](\others\影传\20240217201426_83.png)
+![descript](/others/影传/20240217201426_83.png)
 
-![descript](\others\影传\20240217201426_84.png)
+![descript](/others/影传/20240217201426_84.png)
 
-![descript](\others\影传\20240217201426_85.png)
+![descript](/others/影传/20240217201426_85.png)
 
-![descript](\others\影传\20240217201426_86.png)
+![descript](/others/影传/20240217201426_86.png)
 
 ## 买倒卖的ia
 
-![descript](\others\影传\20240217201426_87.png)
+![descript](/others/影传/20240217201426_87.png)
 
-![descript](\others\影传\20240217201426_88.png)
+![descript](/others/影传/20240217201426_88.png)
 
-![descript](\others\影传\20240217201426_89.png)
+![descript](/others/影传/20240217201426_89.png)
 
-![descript](\others\影传\20240217201426_90.png)
+![descript](/others/影传/20240217201426_90.png)
 
-![descript](\others\影传\20240217201426_91.png)
+![descript](/others/影传/20240217201426_91.png)
 
 ## 期待使用预置包的ia服
 
-![descript](\others\影传\20240217201426_92.png)
+![descript](/others/影传/20240217201426_92.png)
 
-![descript](\others\影传\20240217201426_93.png)
+![descript](/others/影传/20240217201426_93.png)
 
-![descript](\others\影传\20240217201426_94.png)
+![descript](/others/影传/20240217201426_94.png)
 
-![descript](\others\影传\20240217201426_95.png)
+![descript](/others/影传/20240217201426_95.png)
 
 ## 第二次问权限节点
 
-![descript](\others\影传\20240217201426_96.png)
+![descript](/others/影传/20240217201426_96.png)
 
-![descript](\others\影传\20240217201426_97.png)
+![descript](/others/影传/20240217201426_97.png)
 
 ## 期待没权限插件的服务器
 
-![descript](\others\影传\20240217201426_98.png)
+![descript](/others/影传/20240217201426_98.png)
 
-![descript](\others\影传\20240217201426_99.png)
+![descript](/others/影传/20240217201426_99.png)
 
 ## 时间线收束
 
-![descript](\others\影传\20240217201426_100.png)
+![descript](/others/影传/20240217201426_100.png)
 
 要搞互通！又回到昨天了
 
 ## 互通服能用ia吗
 
-![descript](\others\影传\20240217201426_101.png)
+![descript](/others/影传/20240217201426_101.png)
 
 回复 是能的
 
@@ -290,141 +290,141 @@
 
 https://www\.minebbs\.com/threads/geyser\-java\.17452/
 
-![descript](\others\影传\20240217201426_102.png)
+![descript](/others/影传/20240217201426_102.png)
 
-![descript](\others\影传\20240217201426_103.png)
+![descript](/others/影传/20240217201426_103.png)
 
 ## 第三次问权限节点
 
-![descript](\others\影传\20240217201426_104.png)
+![descript](/others/影传/20240217201426_104.png)
 
 ## 又要白嫖插件
 
-![descript](\others\影传\20240217201426_105.png)
+![descript](/others/影传/20240217201426_105.png)
 
-![descript](\others\影传\20240217201426_106.png)
+![descript](/others/影传/20240217201426_106.png)
 
-![descript](\others\影传\20240217201426_107.png)
+![descript](/others/影传/20240217201426_107.png)
 
-![descript](\others\影传\20240217201426_108.png)
+![descript](/others/影传/20240217201426_108.png)
 
-![descript](\others\影传\20240217201426_109.png)
+![descript](/others/影传/20240217201426_109.png)
 
-![descript](\others\影传\20240217201426_110.png)
+![descript](/others/影传/20240217201426_110.png)
 
-![descript](\others\影传\20240217201426_111.png)
+![descript](/others/影传/20240217201426_111.png)
 
 ## 你在哪找到的
 
-![descript](\others\影传\20240217201426_112.png)
+![descript](/others/影传/20240217201426_112.png)
 
 ## 那么多人用ia都白嫖的
 
-![descript](\others\影传\20240217201426_113.png)
+![descript](/others/影传/20240217201426_113.png)
 
-![descript](\others\影传\20240217201426_114.png)
+![descript](/others/影传/20240217201426_114.png)
 
-![descript](\others\影传\20240217201426_115.png)
+![descript](/others/影传/20240217201426_115.png)
 
 ## 屏蔽我了
 
-![descript](\others\影传\20240217201426_116.png)
+![descript](/others/影传/20240217201426_116.png)
 
-![descript](\others\影传\20240217201426_117.png)
+![descript](/others/影传/20240217201426_117.png)
 
 ## 大佬的群发式提问
 
-![descript](\others\影传\20240217201426_118.png)
+![descript](/others/影传/20240217201426_118.png)
 
-![descript](\others\影传\20240217201426_119.png)
+![descript](/others/影传/20240217201426_119.png)
 
-![descript](\others\影传\20240217201426_120.png)
+![descript](/others/影传/20240217201426_120.png)
 
 ## lp？什么ip？
 
 马什么梅？马冬梅呀
 
-![descript](\others\影传\20240217201426_121.png)
+![descript](/others/影传/20240217201426_121.png)
 
-![descript](\others\影传\20240217201426_122.png)
+![descript](/others/影传/20240217201426_122.png)
 
 ## 大佬以前开基岩版
 
-![descript](\others\影传\20240217201426_123.png)
+![descript](/others/影传/20240217201426_123.png)
 
-![descript](\others\影传\20240217201426_124.png)
+![descript](/others/影传/20240217201426_124.png)
 
-![descript](\others\影传\20240217201426_125.png)
+![descript](/others/影传/20240217201426_125.png)
 
 ## pnx开小游戏
 
-![descript](\others\影传\20240217201426_126.png)
+![descript](/others/影传/20240217201426_126.png)
 
 说实话不太记得了，好像pnx是要补全原版特性的吧
 
-![descript](\others\影传\20240217201426_127.png)
+![descript](/others/影传/20240217201426_127.png)
 
-![descript](\others\影传\20240217201426_128.png)
+![descript](/others/影传/20240217201426_128.png)
 
-![descript](\others\影传\20240217201426_129.png)
+![descript](/others/影传/20240217201426_129.png)
 
-![descript](\others\影传\20240217201426_130.png)
+![descript](/others/影传/20240217201426_130.png)
 
-![descript](\others\影传\20240217201426_131.png)
+![descript](/others/影传/20240217201426_131.png)
 
-![descript](\others\影传\20240217201426_132.png)
+![descript](/others/影传/20240217201426_132.png)
 
 ## 大佬觉得purpur也不行
 
-![descript](\others\影传\20240217201426_133.png)
+![descript](/others/影传/20240217201426_133.png)
 
 ## purpur需要自己优化？
 
-![descript](\others\影传\20240217201426_134.png)
+![descript](/others/影传/20240217201426_134.png)
 
-![descript](\others\影传\20240217201426_135.png)
+![descript](/others/影传/20240217201426_135.png)
 
 ## 大佬懒得优化
 
 别听我瞎说，各有各的优点，用gale或者leaf都行
 
-![descript](\others\影传\20240217201426_136.png)
+![descript](/others/影传/20240217201426_136.png)
 
-![descript](\others\影传\20240217201426_137.png)
+![descript](/others/影传/20240217201426_137.png)
 
 又回到前面买端了
 
-![descript](\others\影传\20240217201426_138.png)
+![descript](/others/影传/20240217201426_138.png)
 
 ## 第四次问权限节点
 
-![descript](\others\影传\20240217201426_139.png)
+![descript](/others/影传/20240217201426_139.png)
 
-![descript](\others\影传\20240217201426_140.png)
+![descript](/others/影传/20240217201426_140.png)
 
 ## 大佬没有百度
 
-![descript](\others\影传\20240217201426_141.png)
+![descript](/others/影传/20240217201426_141.png)
 
-![descript](\others\影传\20240217201426_142.png)
+![descript](/others/影传/20240217201426_142.png)
 
-![descript](\others\影传\20240217201426_143.png)
+![descript](/others/影传/20240217201426_143.png)
 
-![descript](\others\影传\20240217201426_144.jpeg)
+![descript](/others/影传/20240217201426_144.jpeg)
 
 ## 看个插件文档好麻烦
 
-![descript](\others\影传\20240217201426_145.png)
+![descript](/others/影传/20240217201426_145.png)
 
-![descript](\others\影传\20240217201426_146.png)
+![descript](/others/影传/20240217201426_146.png)
 
 ## 第五次问权限节点
 
-![descript](\others\影传\20240217201426_147.png)
+![descript](/others/影传/20240217201426_147.png)
 
-![descript](\others\影传\20240217201426_148.png)
+![descript](/others/影传/20240217201426_148.png)
 
-![descript](\others\影传\20240217201426_149.png)![descript](\others\影传\20240217201426_149.jpeg)![descript](\others\影传\20240217201426_149.jpeg)
+![descript](/others/影传/20240217201426_149.png)![descript](/others/影传/20240217201426_149.jpeg)![descript](/others/影传/20240217201426_149.jpeg)
 
 # 凉茶是帅哥的留言
 
@@ -434,193 +434,193 @@ https://www\.minebbs\.com/threads/geyser\-java\.17452/
 
 ## 一会学习好一会不好的是吧
 
-![descript](\others\影传\20240217201426_150.jpeg)![descript](\others\影传\20240217201426_150.jpeg)![descript](\others\影传\20240217201426_150.jpeg)
+![descript](/others/影传/20240217201426_150.jpeg)![descript](/others/影传/20240217201426_150.jpeg)![descript](/others/影传/20240217201426_150.jpeg)
 
 ## 第六次问权限节点
 
-![descript](\others\影传\20240217201426_151.jpeg)![descript](\others\影传\20240217201426_151.jpeg)![descript](\others\影传\20240217201426_151.jpeg)![descript](\others\影传\20240217201426_151.jpeg)![descript](\others\影传\20240217201426_151.jpeg)![descript](\others\影传\20240217201426_151.jpeg)![descript](\others\影传\20240217201426_151.jpeg)![descript](\others\影传\20240217201426_151.jpeg)![descript](\others\影传\20240217201426_151.jpeg)![descript](\others\影传\20240217201426_151.jpeg)![descript](\others\影传\20240217201426_151.jpeg)
+![descript](/others/影传/20240217201426_151.jpeg)![descript](/others/影传/20240217201426_151.jpeg)![descript](/others/影传/20240217201426_151.jpeg)![descript](/others/影传/20240217201426_151.jpeg)![descript](/others/影传/20240217201426_151.jpeg)![descript](/others/影传/20240217201426_151.jpeg)![descript](/others/影传/20240217201426_151.jpeg)![descript](/others/影传/20240217201426_151.jpeg)![descript](/others/影传/20240217201426_151.jpeg)![descript](/others/影传/20240217201426_151.jpeg)![descript](/others/影传/20240217201426_151.jpeg)
 
 ## 第七次问权限节点
 
-![descript](\others\影传\20240217201426_152.jpeg)![descript](\others\影传\20240217201426_152.jpeg)![descript](\others\影传\20240217201426_152.jpeg)![descript](\others\影传\20240217201426_152.jpeg)![descript](\others\影传\20240217201426_152.jpeg)![descript](\others\影传\20240217201426_152.jpeg)![descript](\others\影传\20240217201426_152.jpeg)
+![descript](/others/影传/20240217201426_152.jpeg)![descript](/others/影传/20240217201426_152.jpeg)![descript](/others/影传/20240217201426_152.jpeg)![descript](/others/影传/20240217201426_152.jpeg)![descript](/others/影传/20240217201426_152.jpeg)![descript](/others/影传/20240217201426_152.jpeg)![descript](/others/影传/20240217201426_152.jpeg)
 
 ## 不拐弯抹角了开始老实问实际问题了
 
-![descript](\others\影传\20240217201426_153.jpeg)![descript](\others\影传\20240217201426_153.jpeg)
+![descript](/others/影传/20240217201426_153.jpeg)![descript](/others/影传/20240217201426_153.jpeg)
 
 ## ia没有网页编辑器那不废了吗
 
-![descript](\others\影传\20240217201426_154.jpeg)![descript](\others\影传\20240217201426_154.jpeg)![descript](\others\影传\20240217201426_154.jpeg)![descript](\others\影传\20240217201426_154.jpeg)![descript](\others\影传\20240217201426_154.jpeg)![descript](\others\影传\20240217201426_154.jpeg)![descript](\others\影传\20240217201426_154.jpeg)![descript](\others\影传\20240217201426_154.jpeg)![descript](\others\影传\20240217201426_154.jpeg)
+![descript](/others/影传/20240217201426_154.jpeg)![descript](/others/影传/20240217201426_154.jpeg)![descript](/others/影传/20240217201426_154.jpeg)![descript](/others/影传/20240217201426_154.jpeg)![descript](/others/影传/20240217201426_154.jpeg)![descript](/others/影传/20240217201426_154.jpeg)![descript](/others/影传/20240217201426_154.jpeg)![descript](/others/影传/20240217201426_154.jpeg)![descript](/others/影传/20240217201426_154.jpeg)
 
 ## 装傻中…
 
-![descript](\others\影传\20240217201426_155.jpeg)![descript](\others\影传\20240217201426_155.jpeg)![descript](\others\影传\20240217201426_155.jpeg)![descript](\others\影传\20240217201426_155.jpeg)
+![descript](/others/影传/20240217201426_155.jpeg)![descript](/others/影传/20240217201426_155.jpeg)![descript](/others/影传/20240217201426_155.jpeg)![descript](/others/影传/20240217201426_155.jpeg)
 
 ## 第八次问权限节点
 
-![descript](\others\影传\20240217201426_156.jpeg)
+![descript](/others/影传/20240217201426_156.jpeg)
 
 ## purpur的多核优化为啥没效果
 
-![descript](\others\影传\20240217201426_157.jpeg)![descript](\others\影传\20240217201426_157.jpeg)![descript](\others\影传\20240217201426_157.jpeg)超线程 不是 超频
+![descript](/others/影传/20240217201426_157.jpeg)![descript](/others/影传/20240217201426_157.jpeg)![descript](/others/影传/20240217201426_157.jpeg)超线程 不是 超频
 
-![descript](\others\影传\20240217201426_158.jpeg)![descript](\others\影传\20240217201426_158.jpeg)
+![descript](/others/影传/20240217201426_158.jpeg)![descript](/others/影传/20240217201426_158.jpeg)
 
 ## 扯到超频了就顺着问呗
 
-![descript](\others\影传\20240217201426_159.jpeg)![descript](\others\影传\20240217201426_159.jpeg)![descript](\others\影传\20240217201426_159.jpeg)![descript](\others\影传\20240217201426_159.jpeg)![descript](\others\影传\20240217201426_159.jpeg)
+![descript](/others/影传/20240217201426_159.jpeg)![descript](/others/影传/20240217201426_159.jpeg)![descript](/others/影传/20240217201426_159.jpeg)![descript](/others/影传/20240217201426_159.jpeg)![descript](/others/影传/20240217201426_159.jpeg)
 
 ## ia咋破解的
 
-![descript](\others\影传\20240217201426_160.jpeg)![descript](\others\影传\20240217201426_160.jpeg)![descript](\others\影传\20240217201426_160.jpeg)![descript](\others\影传\20240217201426_160.jpeg)
+![descript](/others/影传/20240217201426_160.jpeg)![descript](/others/影传/20240217201426_160.jpeg)![descript](/others/影传/20240217201426_160.jpeg)![descript](/others/影传/20240217201426_160.jpeg)
 
 我的盗版ia为啥没有破解spigotmc账号
 
-![descript](\others\影传\20240217201426_161.jpeg)![descript](\others\影传\20240217201426_161.jpeg)
+![descript](/others/影传/20240217201426_161.jpeg)![descript](/others/影传/20240217201426_161.jpeg)
 
 开始确认之前买的盗版会不会被封
 
-![descript](\others\影传\20240217201426_162.jpeg)![descript](\others\影传\20240217201426_162.jpeg)![descript](\others\影传\20240217201426_162.jpeg)
+![descript](/others/影传/20240217201426_162.jpeg)![descript](/others/影传/20240217201426_162.jpeg)![descript](/others/影传/20240217201426_162.jpeg)
 
 ## ia的最新版前置发一下呗
 
-![descript](\others\影传\20240217201426_163.jpeg)![descript](\others\影传\20240217201426_163.jpeg)![descript](\others\影传\20240217201426_163.jpeg)![descript](\others\影传\20240217201426_163.jpeg)![descript](\others\影传\20240217201426_163.jpeg)![descript](\others\影传\20240217201426_163.jpeg)![descript](\others\影传\20240217201426_163.jpeg)
+![descript](/others/影传/20240217201426_163.jpeg)![descript](/others/影传/20240217201426_163.jpeg)![descript](/others/影传/20240217201426_163.jpeg)![descript](/others/影传/20240217201426_163.jpeg)![descript](/others/影传/20240217201426_163.jpeg)![descript](/others/影传/20240217201426_163.jpeg)![descript](/others/影传/20240217201426_163.jpeg)
 
 ## 重度懒癌患者
 
-![descript](\others\影传\20240217201426_164.jpeg)![descript](\others\影传\20240217201426_164.jpeg)![descript](\others\影传\20240217201426_164.jpeg)![descript](\others\影传\20240217201426_164.jpeg)
+![descript](/others/影传/20240217201426_164.jpeg)![descript](/others/影传/20240217201426_164.jpeg)![descript](/others/影传/20240217201426_164.jpeg)![descript](/others/影传/20240217201426_164.jpeg)
 
 ## ia都用在啥类型的服务器上面啊
 
-![descript](\others\影传\20240217201426_165.jpeg)![descript](\others\影传\20240217201426_165.jpeg)![descript](\others\影传\20240217201426_165.jpeg)![descript](\others\影传\20240217201426_165.jpeg)![descript](\others\影传\20240217201426_165.jpeg)
+![descript](/others/影传/20240217201426_165.jpeg)![descript](/others/影传/20240217201426_165.jpeg)![descript](/others/影传/20240217201426_165.jpeg)![descript](/others/影传/20240217201426_165.jpeg)![descript](/others/影传/20240217201426_165.jpeg)
 
 ## 做服懒得学东西
 
-![descript](\others\影传\20240217201426_166.jpeg)![descript](\others\影传\20240217201426_166.jpeg)
+![descript](/others/影传/20240217201426_166.jpeg)![descript](/others/影传/20240217201426_166.jpeg)
 
 ## 构建是啥
 
-![descript](\others\影传\20240217201426_167.jpeg)![descript](\others\影传\20240217201426_167.jpeg)![descript](\others\影传\20240217201426_167.jpeg)![descript](\others\影传\20240217201426_167.jpeg)![descript](\others\影传\20240217201426_167.jpeg)
+![descript](/others/影传/20240217201426_167.jpeg)![descript](/others/影传/20240217201426_167.jpeg)![descript](/others/影传/20240217201426_167.jpeg)![descript](/others/影传/20240217201426_167.jpeg)![descript](/others/影传/20240217201426_167.jpeg)
 
 ## idea原来是个冷门软件
 
-![descript](\others\影传\20240217201426_168.jpeg)
+![descript](/others/影传/20240217201426_168.jpeg)
 
 ## idea团队不都是中国人吗
 
-![descript](\others\影传\20240217201426_169.jpeg)
+![descript](/others/影传/20240217201426_169.jpeg)
 
 ## 米饭插件黄牛为啥8块都不卖
 
-![descript](\others\影传\20240217201426_170.jpeg)![descript](\others\影传\20240217201426_170.jpeg)
+![descript](/others/影传/20240217201426_170.jpeg)![descript](/others/影传/20240217201426_170.jpeg)
 
 ## 我不知道我在说啥
 
-![descript](\others\影传\20240217201426_171.jpeg)
+![descript](/others/影传/20240217201426_171.jpeg)
 
 ## 能不能别天天at我了
 
-![descript](\others\影传\20240217201426_172.jpeg)![descript](\others\影传\20240217201426_172.jpeg)![descript](\others\影传\20240217201426_172.jpeg)![descript](\others\影传\20240217201426_172.jpeg)![descript](\others\影传\20240217201426_172.jpeg)![descript](\others\影传\20240217201426_172.jpeg)![descript](\others\影传\20240217201426_172.jpeg)
+![descript](/others/影传/20240217201426_172.jpeg)![descript](/others/影传/20240217201426_172.jpeg)![descript](/others/影传/20240217201426_172.jpeg)![descript](/others/影传/20240217201426_172.jpeg)![descript](/others/影传/20240217201426_172.jpeg)![descript](/others/影传/20240217201426_172.jpeg)![descript](/others/影传/20240217201426_172.jpeg)
 
 ## 咋偷服务器的资源包啊
 
-![descript](\others\影传\20240217201426_173.png)
+![descript](/others/影传/20240217201426_173.png)
 
-![descript](\others\影传\20240217201426_174.png)![descript](\others\影传\20240217201426_174.png)
+![descript](/others/影传/20240217201426_174.png)![descript](/others/影传/20240217201426_174.png)
 
-![descript](\others\影传\20240217201426_175.png)
+![descript](/others/影传/20240217201426_175.png)
 
 ## 上来就气急败坏指望我能好好说话?
 
-![descript](\others\影传\20240217201426_176.png)
+![descript](/others/影传/20240217201426_176.png)
 
-![descript](\others\影传\20240217201426_177.png)
+![descript](/others/影传/20240217201426_177.png)
 
-![descript](\others\影传\20240217201426_178.png)
+![descript](/others/影传/20240217201426_178.png)
 
-![descript](\others\影传\20240217201426_179.png)
+![descript](/others/影传/20240217201426_179.png)
 
-![descript](\others\影传\20240217201426_180.png)
+![descript](/others/影传/20240217201426_180.png)
 
-![descript](\others\影传\20240217201426_181.png)
+![descript](/others/影传/20240217201426_181.png)
 
-![descript](\others\影传\20240217201426_182.png)
+![descript](/others/影传/20240217201426_182.png)
 
-![descript](\others\影传\20240217201426_183.png)
+![descript](/others/影传/20240217201426_183.png)
 
-![descript](\others\影传\20240217201426_184.png)
+![descript](/others/影传/20240217201426_184.png)
 
-![descript](\others\影传\20240217201426_185.png)
+![descript](/others/影传/20240217201426_185.png)
 
 ## 2023\-9\-29
 
-![descript](\others\影传\20240217201426_186.png)
+![descript](/others/影传/20240217201426_186.png)
 
-![descript](\others\影传\20240217201426_187.png)
+![descript](/others/影传/20240217201426_187.png)
 
 ## 2023—10—23
 
-![descript](\others\影传\20240217201426_188.png)
+![descript](/others/影传/20240217201426_188.png)
 
 ## 太乐了就因为我收点赞助就来我这抢人来了
 
-![descript](\others\影传\20240217201426_189.jpeg)![descript](\others\影传\20240217201426_189.jpeg)
+![descript](/others/影传/20240217201426_189.jpeg)![descript](/others/影传/20240217201426_189.jpeg)
 
 ## 天天干傻事气到我随手删了不行？
 
-![descript](\others\影传\20240217201426_190.jpeg)![descript](\others\影传\20240217201426_190.jpeg)
+![descript](/others/影传/20240217201426_190.jpeg)![descript](/others/影传/20240217201426_190.jpeg)
 
 ## （推）2023\-10\-28 
 
 ### 一场由盗版CMI引起的乐子神剧
 
-![descript](\others\影传\20240217201426_191.jpeg)![descript](\others\影传\20240217201426_191.jpeg)![descript](\others\影传\20240217201426_191.jpeg)![descript](\others\影传\20240217201426_191.jpeg)![descript](\others\影传\20240217201426_191.jpeg)
+![descript](/others/影传/20240217201426_191.jpeg)![descript](/others/影传/20240217201426_191.jpeg)![descript](/others/影传/20240217201426_191.jpeg)![descript](/others/影传/20240217201426_191.jpeg)![descript](/others/影传/20240217201426_191.jpeg)
 
 ### 家人们，凉茶的整合包质量真低啊
 
-![descript](\others\影传\20240217201426_192.jpeg)
+![descript](/others/影传/20240217201426_192.jpeg)
 
 ### 为什么有的插件会自己炸掉，我不理解
 
-![descript](\others\影传\20240217201426_193.jpeg)
+![descript](/others/影传/20240217201426_193.jpeg)
 
 ### 你的后台终于是满屏绿色了…等下，好像不是满屏绿色吧
 
 哥们咱既然都能有勇气发出来就别撤回好不好，再撤回我就只能上防撤回模板了
 
-![descript](\others\影传\20240217201426_194.jpeg)
+![descript](/others/影传/20240217201426_194.jpeg)
 
 ### 什？粘液科技是鬼斩写的
 
-![descript](\others\影传\20240217201426_195.jpeg)
+![descript](/others/影传/20240217201426_195.jpeg)
 
 ### ProtocolLib不是一个库吗，为什么都叫他api
 
-![descript](\others\影传\20240217201426_196.jpeg)
+![descript](/others/影传/20240217201426_196.jpeg)
 
 ### 这种人真的好贱啊
 
-![descript](\others\影传\20240217201426_197.jpeg)
+![descript](/others/影传/20240217201426_197.jpeg)
 
 ### papi是啥都搞不清是吧
 
-![descript](\others\影传\20240217201426_198.jpeg)
+![descript](/others/影传/20240217201426_198.jpeg)
 
 ### 你的下一个问题是：构建站在哪
 
-![descript](\others\影传\20240217201426_199.jpeg)
+![descript](/others/影传/20240217201426_199.jpeg)
 
 ### 最新版体积为啥没之前大
 
-![descript](\others\影传\20240217201426_200.jpeg)
+![descript](/others/影传/20240217201426_200.jpeg)
 
 ### 《1024进制》
 
-![descript](\others\影传\20240217201426_201.jpeg)
+![descript](/others/影传/20240217201426_201.jpeg)
 
 ### 就差0\.05个版本更新个啥
 
-![descript](\others\影传\20240217201426_202.jpeg)
+![descript](/others/影传/20240217201426_202.jpeg)
 
 跑路了实在不行了
 
@@ -628,21 +628,21 @@ https://www\.minebbs\.com/threads/geyser\-java\.17452/
 
 （哈没脸见人了直接退群可还行）
 
-![descript](\others\影传\20240217201426_203.jpeg)![descript](\others\影传\20240217201426_203.jpeg)
+![descript](/others/影传/20240217201426_203.jpeg)![descript](/others/影传/20240217201426_203.jpeg)
 
-![descript](\others\影传\20240217201426_204.jpeg)
+![descript](/others/影传/20240217201426_204.jpeg)
 
 ### 小插话
 
 哥们你给我踢了然后故意把自己事迹传开了是吧
 
-![descript](\others\影传\20240217201426_205.jpeg)![descript](\others\影传\20240217201426_205.jpeg)![descript](\others\影传\20240217201426_205.png)
+![descript](/others/影传/20240217201426_205.jpeg)![descript](/others/影传/20240217201426_205.jpeg)![descript](/others/影传/20240217201426_205.png)
 
 ## eula是干嘛的都不知道建议别开了
 
 （哈，现在撤回经典语句的速度越来越快了啦）
 
-![descript](\others\影传\20240217201426_206.jpeg)
+![descript](/others/影传/20240217201426_206.jpeg)
 
 ## Iris有人会用吗
 
@@ -650,108 +650,108 @@ https://www\.minebbs\.com/threads/geyser\-java\.17452/
 
 ### 群聊
 
-![descript](\others\影传\20240217201426_207.jpeg)![descript](\others\影传\20240217201426_207.jpeg)
+![descript](/others/影传/20240217201426_207.jpeg)![descript](/others/影传/20240217201426_207.jpeg)
 
-![descript](\others\影传\20240217201426_208.jpeg)
+![descript](/others/影传/20240217201426_208.jpeg)
 
 ### 和我的私信（敷衍向）
 
 （这个是说他内测服的一个技术，但是貌似只给了我10块的服务器赞助吧）
 
-![descript](\others\影传\20240217201426_209.jpeg)
+![descript](/others/影传/20240217201426_209.jpeg)
 
 先叠盾，我不会用Iris也第一次听说这插件，而且当时在坐高铁所以网很卡没怎么理他，就随便敷衍一下，真不知道他居然能到处整活啊
 
 乐，今天给我屏蔽了可还行\(23\-11\-13\)
 
-![descript](\others\影传\20240217201426_210.jpeg)
+![descript](/others/影传/20240217201426_210.jpeg)
 
 （好好好，我终于知道他那文档哪里来的了）
 
 ## a？提醒你一下别作死了就给我踢了
 
-![descript](\others\影传\20240217201426_211.jpeg)
+![descript](/others/影传/20240217201426_211.jpeg)
 
 ## 乐开小号想套我话结果被我给猜出来了吧（雾）
 
-![descript](\others\影传\20240217201426_212.jpeg)![descript](\others\影传\20240217201426_212.jpeg)
+![descript](/others/影传/20240217201426_212.jpeg)![descript](/others/影传/20240217201426_212.jpeg)
 
-![descript](\others\影传\20240217201426_213.jpeg)
+![descript](/others/影传/20240217201426_213.jpeg)
 
-![descript](\others\影传\20240217201426_214.jpeg)
+![descript](/others/影传/20240217201426_214.jpeg)
 
 （现在他小号一直在换）
 
-![descript](\others\影传\20240217201426_215.jpeg)
+![descript](/others/影传/20240217201426_215.jpeg)
 
 ## 呵呵啥呵呵
 
-![descript](\others\影传\20240217201426_216.jpeg)
+![descript](/others/影传/20240217201426_216.jpeg)
 
-![descript](\others\影传\20240217201426_217.jpeg)
+![descript](/others/影传/20240217201426_217.jpeg)
 
 # 2023\-11\-12
 
 ## 他骂我呜呜呜
 
-![descript](\others\影传\20240217201426_218.png)
+![descript](/others/影传/20240217201426_218.png)
 
-![descript](\others\影传\20240217201426_219.png)
+![descript](/others/影传/20240217201426_219.png)
 
-![descript](\others\影传\20240217201426_220.png)
+![descript](/others/影传/20240217201426_220.png)
 
 ## 又被人骂了
 
-![descript](\others\影传\20240217201426_221.png)
+![descript](/others/影传/20240217201426_221.png)
 
 ## 啥时候吃
 
-![descript](\others\影传\20240217201426_222.png)
+![descript](/others/影传/20240217201426_222.png)
 
-![descript](\others\影传\20240217201426_223.png)
+![descript](/others/影传/20240217201426_223.png)
 
 ## 对着曾帮过自己的骂
 
-![descript](\others\影传\20240217201426_224.png)
+![descript](/others/影传/20240217201426_224.png)
 
-![descript](\others\影传\20240217201426_225.png)
+![descript](/others/影传/20240217201426_225.png)
 
-![descript](\others\影传\20240217201426_226.png)
+![descript](/others/影传/20240217201426_226.png)
 
 ## 躲进小楼成一统
 
-![descript](\others\影传\20240217201426_227.png)
+![descript](/others/影传/20240217201426_227.png)
 
-![descript](\others\影传\20240217201426_228.png)
+![descript](/others/影传/20240217201426_228.png)
 
 能在乐子系列丛书中留下这么多痕迹的也是比较少的
 
-![descript](\others\影传\20240217201426_229.png)
+![descript](/others/影传/20240217201426_229.png)
 
-![descript](\others\影传\20240217201426_230.png)
+![descript](/others/影传/20240217201426_230.png)
 
-![descript](\others\影传\20240217201426_231.png)
+![descript](/others/影传/20240217201426_231.png)
 
 ## 被夸奖啦
 
-![descript](\others\影传\20240217201426_232.png)
+![descript](/others/影传/20240217201426_232.png)
 
-![descript](\others\影传\20240217201426_233.png)
+![descript](/others/影传/20240217201426_233.png)
 
-![descript](\others\影传\20240217201426_234.png)
+![descript](/others/影传/20240217201426_234.png)
 
-![descript](\others\影传\20240217201426_235.png)
+![descript](/others/影传/20240217201426_235.png)
 
-![descript](\others\影传\20240217201426_236.png)
+![descript](/others/影传/20240217201426_236.png)
 
-![descript](\others\影传\20240217201426_237.png)
+![descript](/others/影传/20240217201426_237.png)
 
 ## 莫欺弱智傻
 
-![descript](\others\影传\20240217201426_238.png)
+![descript](/others/影传/20240217201426_238.png)
 
-![descript](\others\影传\20240217201426_239.png)
+![descript](/others/影传/20240217201426_239.png)
 
-![descript](\others\影传\20240217201426_240.png)
+![descript](/others/影传/20240217201426_240.png)
 
 这不就来了嘛 观后感
