--- a/docs/article/月亮先生传.md
+++ b/docs/article/月亮先生传.md
@@ -21,25 +21,25 @@
 
 然后不发报错 叫发好几遍不发报错 不发日志
 
-![descript](others\月亮先生传\20240217201013_0.png)
+![descript](/others/月亮先生传/20240217201013_0.png)
 
-![descript](others\月亮先生传\20240217201013_1.png)
+![descript](/others/月亮先生传/20240217201013_1.png)
 
 # 【置顶】重生之我是月亮然后霸占KL
 
 ## 霸占服务器
 
-![descript](others\月亮先生传\20240217201013_2.png)
+![descript](/others/月亮先生传/20240217201013_2.png)
 
 - 说明：此处作者lim114514与原服主生鱼为友好关系，不存在辱骂生鱼的情况。
 
-![descript](others\月亮先生传\20240217201013_3.png)
+![descript](/others/月亮先生传/20240217201013_3.png)
 
 那请问，你不是OP吗？怎么又变成服主了呢？
 
 ## 互联网太恐怖啦
 
-![descript](others\月亮先生传\20240217201013_4.png)
+![descript](/others/月亮先生传/20240217201013_4.png)
 
 到底是还是不是啊（恼）
 
@@ -51,7 +51,7 @@ woshishabi6:666777888:127\.0\.0\.1:\["我不道啊","我不道啊"\]
 
 ## E5\-2680V4是洋垃圾
 
-![descript](others\月亮先生传\20240217201013_5.png)
+![descript](/others/月亮先生传/20240217201013_5.png)
 
 ## 主线任务·洛川书
 
@@ -63,33 +63,33 @@ woshishabi6:666777888:127\.0\.0\.1:\["我不道啊","我不道啊"\]
 
 #### 正文
 
-![descript](others\月亮先生传\20240217201013_6.png)
+![descript](/others/月亮先生传/20240217201013_6.png)
 
 图：月亮先生炫耀自己在咸鱼上购买的市面泛滥服务端的ItemsAdder材质，殊不知罗鸿电子商务的工作人员与洛川之境的服主有着神秘关系。（啊呸，现在我就是洛川服主 lim114514注\[2023\.11\.5\]
 
-![descript](others\月亮先生传\20240217201013_7.png)
+![descript](/others/月亮先生传/20240217201013_7.png)
 
 图：洛川之境管理员对购买该服务端相关傻逼的评价。
 
-![descript](others\月亮先生传\20240217201013_8.png)
+![descript](/others/月亮先生传/20240217201013_8.png)
 
 图：洛川之境原服主对购买该服务端的傻逼罗鸿的评价以及善意提醒。
 
-![descript](others\月亮先生传\20240217201013_9.png)
+![descript](/others/月亮先生传/20240217201013_9.png)
 
 图：洛川之境原服主对傻逼罗鸿的评价。
 
-![descript](others\月亮先生传\20240217201013_10.png)
+![descript](/others/月亮先生传/20240217201013_10.png)
 
 图：洛川之境服主最后一次善意的对罗鸿的提醒，后面罗鸿电子商务有限公司的工作人员已经对他展开攻击了。
 
 同时，我们团队借助神秘渠道获取了完整的罗鸿KL玩家数据密码（全脱裤\+解密）以及洛川之境该版本的相关登录数据库（与新版本不相同）。
 
-![descript](others\月亮先生传\20240217201013_11.png)
+![descript](/others/月亮先生传/20240217201013_11.png)
 
 另外，该服务端我们罗鸿电子商务有限公司的工作人员也有，而且是服主直接免费给的那种。
 
-![descript](others\月亮先生传\20240217201013_12.png)
+![descript](/others/月亮先生传/20240217201013_12.png)
 
 泛滥端，嘴贱，若只。
 
@@ -101,19 +101,19 @@ woshishabi6:666777888:127\.0\.0\.1:\["我不道啊","我不道啊"\]
 
 #### 正文
 
-![descript](others\月亮先生传\20240217201013_13.png)
+![descript](/others/月亮先生传/20240217201013_13.png)
 
-![descript](others\月亮先生传\20240217201013_14.png)
+![descript](/others/月亮先生传/20240217201013_14.png)
 
-![descript](others\月亮先生传\20240217201013_15.png)
+![descript](/others/月亮先生传/20240217201013_15.png)
 
 懵逼的月亮\.png
 
-![descript](others\月亮先生传\20240217201013_16.png)
+![descript](/others/月亮先生传/20240217201013_16.png)
 
 我 看 你 妈
 
-![descript](others\月亮先生传\20240217201013_17.png)
+![descript](/others/月亮先生传/20240217201013_17.png)
 
 我邻居开的，不是我开的捏
 
@@ -125,19 +125,19 @@ woshishabi6:666777888:127\.0\.0\.1:\["我不道啊","我不道啊"\]
 
 #### 正文
 
-![descript](others\月亮先生传\20240217201013_18.jpeg)
+![descript](/others/月亮先生传/20240217201013_18.jpeg)
 
 - 月亮将他的服务器更换为了Bungeecord多端架构
 
-![descript](others\月亮先生传\20240217201013_19.jpeg)
+![descript](/others/月亮先生传/20240217201013_19.jpeg)
 
 生鱼管家 ShengYuAdmin 2 即将上线！
 
-![descript](others\月亮先生传\20240217201013_20.png)
+![descript](/others/月亮先生传/20240217201013_20.png)
 
 ShengYuAdmin\+ 系列产品上线，月亮开始急眼
 
-![descript](others\月亮先生传\20240217201013_21.png)
+![descript](/others/月亮先生传/20240217201013_21.png)
 
 逸一时，误一世，逸酒逸久罢已龄
 
@@ -145,15 +145,15 @@ ShengYuAdmin\+ 系列产品上线，月亮开始急眼
 
 中二病犯了
 
-![descript](others\月亮先生传\20240217201013_22.png)
+![descript](/others/月亮先生传/20240217201013_22.png)
 
 啊谁暑假上学，好像你学历高？
 
-![descript](others\月亮先生传\20240217201013_23.png)
+![descript](/others/月亮先生传/20240217201013_23.png)
 
 玩家对罗鸿的评价
 
-![descript](others\月亮先生传\20240217201013_24.png)
+![descript](/others/月亮先生传/20240217201013_24.png)
 
 MCBBS 摸鱼生存服务端
 
@@ -167,71 +167,71 @@ MCBBS 摸鱼生存服务端
 
 #### 正文
 
-![descript](others\月亮先生传\20240217201013_25.png)
+![descript](/others/月亮先生传/20240217201013_25.png)
 
 月亮的服务器被压测了。
 
 # 开始
 
-![descript](others\月亮先生传\20240217201013_26.png)
+![descript](/others/月亮先生传/20240217201013_26.png)
 
-![descript](others\月亮先生传\20240217201013_27.png)
+![descript](/others/月亮先生传/20240217201013_27.png)
 
 ## 输入指令出现红字
 
-![descript](others\月亮先生传\20240217201013_28.png)
+![descript](/others/月亮先生传/20240217201013_28.png)
 
 ## 好多插件同时红掉了
 
-![descript](others\月亮先生传\20240217201013_29.png)
+![descript](/others/月亮先生传/20240217201013_29.png)
 
-![descript](others\月亮先生传\20240217201013_30.png)
+![descript](/others/月亮先生传/20240217201013_30.png)
 
 ## 安装是不是这样装
 
-![descript](others\月亮先生传\20240217201013_31.png)
+![descript](/others/月亮先生传/20240217201013_31.png)
 
 ## 我进群啦！
 
-![descript](others\月亮先生传\20240217201013_32.png)
+![descript](/others/月亮先生传/20240217201013_32.png)
 
-![descript](others\月亮先生传\20240217201013_33.png)
+![descript](/others/月亮先生传/20240217201013_33.png)
 
 ## 快把怒火对着我
 
-![descript](others\月亮先生传\20240217201013_34.png)
+![descript](/others/月亮先生传/20240217201013_34.png)
 
-![descript](others\月亮先生传\20240217201013_35.png)
+![descript](/others/月亮先生传/20240217201013_35.png)
 
-![descript](others\月亮先生传\20240217201013_36.png)
+![descript](/others/月亮先生传/20240217201013_36.png)
 
-![descript](others\月亮先生传\20240217201013_37.png)
+![descript](/others/月亮先生传/20240217201013_37.png)
 
-![descript](others\月亮先生传\20240217201013_38.png)
+![descript](/others/月亮先生传/20240217201013_38.png)
 
 ## 小月亮要语音
 
 这真是个成年人干的事吗
 
-![descript](others\月亮先生传\20240217201013_39.png)
+![descript](/others/月亮先生传/20240217201013_39.png)
 
-![descript](others\月亮先生传\20240217201013_40.png)
+![descript](/others/月亮先生传/20240217201013_40.png)
 
-![descript](others\月亮先生传\20240217201013_41.png)
+![descript](/others/月亮先生传/20240217201013_41.png)
 
-![descript](others\月亮先生传\20240217201013_42.png)
+![descript](/others/月亮先生传/20240217201013_42.png)
 
 ## 就用自己的可笑的插件管理器热注入
 
-![descript](others\月亮先生传\20240217201013_43.png)
+![descript](/others/月亮先生传/20240217201013_43.png)
 
-![descript](others\月亮先生传\20240217201013_44.png)
+![descript](/others/月亮先生传/20240217201013_44.png)
 
 ## 优越感 你们一群00后
 
 ## 群人数还不及我服务器群十分十一
 
-![descript](others\月亮先生传\20240217201013_45.png)
+![descript](/others/月亮先生传/20240217201013_45.png)
 
 记住这个地方，后面进群发现群人数还没这个群多
 
@@ -239,113 +239,113 @@ MCBBS 摸鱼生存服务端
 
 怎么小学生一样呢
 
-![descript](others\月亮先生传\20240217201013_46.png)
+![descript](/others/月亮先生传/20240217201013_46.png)
 
-![descript](others\月亮先生传\20240217201013_47.png)
+![descript](/others/月亮先生传/20240217201013_47.png)
 
 # 私聊
 
 ## 挑他一波
 
-![descript](others\月亮先生传\20240217201013_48.png)
+![descript](/others/月亮先生传/20240217201013_48.png)
 
-![descript](others\月亮先生传\20240217201013_49.png)
+![descript](/others/月亮先生传/20240217201013_49.png)
 
 ## 开始优越 日活200\+
 
-![descript](others\月亮先生传\20240217201013_50.png)
+![descript](/others/月亮先生传/20240217201013_50.png)
 
 ## 我在群里提出问我我自己解决
 
-![descript](others\月亮先生传\20240217201013_51.png)
+![descript](/others/月亮先生传/20240217201013_51.png)
 
-![descript](others\月亮先生传\20240217201013_52.png)
+![descript](/others/月亮先生传/20240217201013_52.png)
 
 ## 就插件问题，我就不发日志
 
-![descript](others\月亮先生传\20240217201013_53.png)
+![descript](/others/月亮先生传/20240217201013_53.png)
 
 ## 懒得跟你一个不懂的人说这么多
 
 金子做的日志
 
-![descript](others\月亮先生传\20240217201013_54.png)
+![descript](/others/月亮先生传/20240217201013_54.png)
 
 ## 话锋一转 有白名单
 
 所以，跟发不发报错什么关系
 
-![descript](others\月亮先生传\20240217201013_55.png)
+![descript](/others/月亮先生传/20240217201013_55.png)
 
-![descript](others\月亮先生传\20240217201013_56.png)
+![descript](/others/月亮先生传/20240217201013_56.png)
 
-![descript](others\月亮先生传\20240217201013_57.png)
+![descript](/others/月亮先生传/20240217201013_57.png)
 
 ## 开始诋毁插件
 
-![descript](others\月亮先生传\20240217201013_58.png)
+![descript](/others/月亮先生传/20240217201013_58.png)
 
-![descript](others\月亮先生传\20240217201013_59.png)
+![descript](/others/月亮先生传/20240217201013_59.png)
 
 ## 接着说人素质不行
 
 是说插件开发者素质不行，我素质不行，还是你自己呢
 
-![descript](others\月亮先生传\20240217201013_60.png)
+![descript](/others/月亮先生传/20240217201013_60.png)
 
 ## 鬼斩的插件你们能比？
 
-![descript](others\月亮先生传\20240217201013_61.png)
+![descript](/others/月亮先生传/20240217201013_61.png)
 
-![descript](others\月亮先生传\20240217201013_62.png)
+![descript](/others/月亮先生传/20240217201013_62.png)
 
 ## 看看鬼斩怎么说
 
-![descript](others\月亮先生传\20240217201013_63.png)
+![descript](/others/月亮先生传/20240217201013_63.png)
 
 ## 又开始优越
 
-![descript](others\月亮先生传\20240217201013_64.png)
+![descript](/others/月亮先生传/20240217201013_64.png)
 
-![descript](others\月亮先生传\20240217201013_65.png)
+![descript](/others/月亮先生传/20240217201013_65.png)
 
-![descript](others\月亮先生传\20240217201013_66.png)
+![descript](/others/月亮先生传/20240217201013_66.png)
 
 ## 私聊去了群之后
 
-![descript](others\月亮先生传\20240217201013_67.png)
+![descript](/others/月亮先生传/20240217201013_67.png)
 
 ## 他怎么把我删了的
 
-![descript](others\月亮先生传\20240217201013_68.png)
+![descript](/others/月亮先生传/20240217201013_68.png)
 
-![descript](others\月亮先生传\20240217201013_69.png)
+![descript](/others/月亮先生传/20240217201013_69.png)
 
-![descript](others\月亮先生传\20240217201013_70.png)
+![descript](/others/月亮先生传/20240217201013_70.png)
 
-![descript](others\月亮先生传\20240217201013_71.png)
+![descript](/others/月亮先生传/20240217201013_71.png)
 
 ## 月亮先生对自己的评价
 
-![descript](others\月亮先生传\20240217201013_72.png)
+![descript](/others/月亮先生传/20240217201013_72.png)
 
 # 换人
 
-![descript](others\月亮先生传\20240217201013_73.png)
+![descript](/others/月亮先生传/20240217201013_73.png)
 
-![descript](others\月亮先生传\20240217201013_74.png)
+![descript](/others/月亮先生传/20240217201013_74.png)
 
 ## 00后会嘴硬自命清高
 
-![descript](others\月亮先生传\20240217201013_75.png)
+![descript](/others/月亮先生传/20240217201013_75.png)
 
-![descript](others\月亮先生传\20240217201013_76.png)
+![descript](/others/月亮先生传/20240217201013_76.png)
 
 ## 看不起穷高中生
 
-![descript](others\月亮先生传\20240217201013_77.png)
+![descript](/others/月亮先生传/20240217201013_77.png)
 
-![descript](others\月亮先生传\20240217201013_78.png)
+![descript](/others/月亮先生传/20240217201013_78.png)
 
 ## 看不起你，因为我有工作你没有
 
@@ -353,39 +353,39 @@ MCBBS 摸鱼生存服务端
 
 记住这句话，他说他是公益服
 
-![descript](others\月亮先生传\20240217201013_79.png)
+![descript](/others/月亮先生传/20240217201013_79.png)
 
-![descript](others\月亮先生传\20240217201013_80.png)
+![descript](/others/月亮先生传/20240217201013_80.png)
 
 ## 闭上你的嘴！
 
-![descript](others\月亮先生传\20240217201013_81.png)
+![descript](/others/月亮先生传/20240217201013_81.png)
 
 注意上方的 VPS 独立机都买不起😂 
 
 \*一年一年买12900K最多花几千
 
-![descript](others\月亮先生传\20240217201013_82.jpeg)
+![descript](/others/月亮先生传/20240217201013_82.jpeg)
 
-![descript](others\月亮先生传\20240217201013_83.png)
+![descript](/others/月亮先生传/20240217201013_83.png)
 
 ## 月亮先生优越的原因
 
-![descript](others\月亮先生传\20240217201013_84.png)
+![descript](/others/月亮先生传/20240217201013_84.png)
 
 ## 湖南广播电视大学
 
-![descript](others\月亮先生传\20240217201013_85.png)
+![descript](/others/月亮先生传/20240217201013_85.png)
 
-![descript](others\月亮先生传\20240217201013_86.png)
+![descript](/others/月亮先生传/20240217201013_86.png)
 
-![descript](others\月亮先生传\20240217201013_87.png)
+![descript](/others/月亮先生传/20240217201013_87.png)
 
-![descript](others\月亮先生传\20240217201013_88.png)
+![descript](/others/月亮先生传/20240217201013_88.png)
 
-![descript](others\月亮先生传\20240217201013_89.png)
+![descript](/others/月亮先生传/20240217201013_89.png)
 
-![descript](others\月亮先生传\20240217201013_90.png)
+![descript](/others/月亮先生传/20240217201013_90.png)
 
 # 服务器揭秘
 
@@ -393,30 +393,30 @@ MCBBS 摸鱼生存服务端
 
 不是说那群人数不到你服务器群十分之一吗？你这才几个人
 
-![descript](others\月亮先生传\20240217201013_91.png)
+![descript](/others/月亮先生传/20240217201013_91.png)
 
 ## 在线9人
 
 说好的日活跃200\+呢
 
-![descript](others\月亮先生传\20240217201013_92.png)
+![descript](/others/月亮先生传/20240217201013_92.png)
 
 ## 樱花映射
 
 你的公网IP呢？为什么啃老（母亲验证）
 
-![descript](others\月亮先生传\20240217201013_93.png)
+![descript](/others/月亮先生传/20240217201013_93.png)
 
-![descript](others\月亮先生传\20240217201013_94.png)
+![descript](/others/月亮先生传/20240217201013_94.png)
 
 要不是群主是月亮先生 我真怀疑进错了
 
 - 上面的大哥，确实进错了😂
 - 月亮他自己都没服，L
 
-![descript](others\月亮先生传\20240217201013_95.png)
+![descript](/others/月亮先生传/20240217201013_95.png)
 
-![descript](others\月亮先生传\20240217201013_96.png)
+![descript](/others/月亮先生传/20240217201013_96.png)
 
 1471243306
 
@@ -424,29 +424,29 @@ MCBBS 摸鱼生存服务端
 
 看左下角
 
-![descript](others\月亮先生传\20240217201013_97.png)
+![descript](/others/月亮先生传/20240217201013_97.png)
 
 Logo设计工具\.肯定月亮搞得，我生鱼哥不可能干出这种事
 
-![descript](others\月亮先生传\20240217201013_98.png)
+![descript](/others/月亮先生传/20240217201013_98.png)
 
 我都没注意hhh
 
 ## 似曾相识的主城
 
-![descript](others\月亮先生传\20240217201013_99.png)
+![descript](/others/月亮先生传/20240217201013_99.png)
 
 ## 公益服
 
-![descript](others\月亮先生传\20240217201013_100.png)
+![descript](/others/月亮先生传/20240217201013_100.png)
 
-![descript](others\月亮先生传\20240217201013_101.png)
+![descript](/others/月亮先生传/20240217201013_101.png)
 
-![descript](others\月亮先生传\20240217201013_102.png)
+![descript](/others/月亮先生传/20240217201013_102.png)
 
 ## 世界上最高的延迟——月亮无尘机房
 
-![descript](others\月亮先生传\20240217201013_103.png)
+![descript](/others/月亮先生传/20240217201013_103.png)
 
 56ms，下面这是原服主生鱼的服务器搬到宿迁主机后的延迟：
 
@@ -454,17 +454,17 @@ Logo设计工具\.肯定月亮搞得，我生鱼哥不可能干出这种事
 
 ## 菜单CommandPanel
 
-![descript](others\月亮先生传\20240217201013_104.png)
+![descript](/others/月亮先生传/20240217201013_104.png)
 
 ## 无反作弊
 
-![descript](others\月亮先生传\20240217201013_105.png)
+![descript](/others/月亮先生传/20240217201013_105.png)
 
-![descript](others\月亮先生传\20240217201013_106.png)
+![descript](/others/月亮先生传/20240217201013_106.png)
 
-![descript](others\月亮先生传\20240217201013_107.png)
+![descript](/others/月亮先生传/20240217201013_107.png)
 
-![descript](others\月亮先生传\20240217201013_108.png)
+![descript](/others/月亮先生传/20240217201013_108.png)
 
 （补充上方H3x说过的话：主城区没有假矿。而且生存的是Paper自带）
 
@@ -474,19 +474,19 @@ Logo设计工具\.肯定月亮搞得，我生鱼哥不可能干出这种事
 
 可以刷物品的市场插件
 
-![descript](others\月亮先生传\20240217201013_109.png)
+![descript](/others/月亮先生传/20240217201013_109.png)
 
 ## 菜单里的res
 
 点了就给个help笑
 
-![descript](others\月亮先生传\20240217201013_110.png)
+![descript](/others/月亮先生传/20240217201013_110.png)
 
-![descript](others\月亮先生传\20240217201013_111.png)
+![descript](/others/月亮先生传/20240217201013_111.png)
 
 ## papi兼容性
 
-![descript](others\月亮先生传\20240217201013_112.png)
+![descript](/others/月亮先生传/20240217201013_112.png)
 
 ## 米饭插件
 
@@ -498,27 +498,27 @@ Logo设计工具\.肯定月亮搞得，我生鱼哥不可能干出这种事
 
 公会
 
-![descript](others\月亮先生传\20240217201013_113.png)
+![descript](/others/月亮先生传/20240217201013_113.png)
 
 称号
 
-![descript](others\月亮先生传\20240217201013_114.png)
+![descript](/others/月亮先生传/20240217201013_114.png)
 
 任务
 
-![descript](others\月亮先生传\20240217201013_115.png)
+![descript](/others/月亮先生传/20240217201013_115.png)
 
-![descript](others\月亮先生传\20240217201013_116.png)
+![descript](/others/月亮先生传/20240217201013_116.png)
 
 地标
 
-![descript](others\月亮先生传\20240217201013_117.png)
+![descript](/others/月亮先生传/20240217201013_117.png)
 
 没有攻击这个插件的意思，这个插件很好，开源提供构建 所以月入过万的大佬怎么不去用AE或者直接去找人写个呗？
 
-![descript](others\月亮先生传\20240217201013_118.png)
+![descript](/others/月亮先生传/20240217201013_118.png)
 
-![descript](others\月亮先生传\20240217201013_119.png)
+![descript](/others/月亮先生传/20240217201013_119.png)
 
 其他的一些
 
@@ -530,21 +530,21 @@ luckperms pvpmanager coreprotect mcmmo nexauth nexengine
 
 - 目前主城生存已被完全修复。
 
-![descript](others\月亮先生传\20240217201013_120.png)
+![descript](/others/月亮先生传/20240217201013_120.png)
 
-![descript](others\月亮先生传\20240217201013_121.png)
+![descript](/others/月亮先生传/20240217201013_121.png)
 
-![descript](others\月亮先生传\20240217201013_122.png)
+![descript](/others/月亮先生传/20240217201013_122.png)
 
-![descript](others\月亮先生传\20240217201013_123.png)
+![descript](/others/月亮先生传/20240217201013_123.png)
 
-![descript](others\月亮先生传\20240217201013_124.png)
+![descript](/others/月亮先生传/20240217201013_124.png)
 
 # 潜伏得到的内容
 
 ## 错误的群号
 
-![descript](others\月亮先生传\20240217201013_125.png)![descript](others\月亮先生传\20240217201013_125.png)
+![descript](/others/月亮先生传/20240217201013_125.png)![descript](/others/月亮先生传/20240217201013_125.png)
 
 514804132
 
@@ -552,21 +552,21 @@ luckperms pvpmanager coreprotect mcmmo nexauth nexengine
 
 ## 让别人背锅
 
-![descript](others\月亮先生传\20240217201013_126.png)
+![descript](/others/月亮先生传/20240217201013_126.png)
 
 让别人背锅并且用别人名字打广告，炸裂
 
 ## 当不了主
 
-![descript](others\月亮先生传\20240217201013_127.png)
+![descript](/others/月亮先生传/20240217201013_127.png)
 
 L，前面还说自己是服主，这回怎么又变成OP了呢
 
 ## 23岁，是学生
 
-![descript](others\月亮先生传\20240217201013_128.png)
+![descript](/others/月亮先生传/20240217201013_128.png)
 
-![descript](others\月亮先生传\20240217201013_129.png)
+![descript](/others/月亮先生传/20240217201013_129.png)
 
 不是还笑话我是个高中生吗，炸裂
 
@@ -576,97 +576,97 @@ L，前面还说自己是服主，这回怎么又变成OP了呢
 
 ### 我怕这是套路云，用几天不让你用了强制续费
 
-![descript](others\月亮先生传\20240217201013_130.png)
+![descript](/others/月亮先生传/20240217201013_130.png)
 
 ### 服务端还是放我电脑里面，这样更安全
 
-![descript](others\月亮先生传\20240217201013_131.png)
+![descript](/others/月亮先生传/20240217201013_131.png)
 
-![descript](others\月亮先生传\20240217201013_132.png)
+![descript](/others/月亮先生传/20240217201013_132.png)
 
-![descript](others\月亮先生传\20240217201013_133.png)
+![descript](/others/月亮先生传/20240217201013_133.png)
 
-![descript](others\月亮先生传\20240217201013_134.png)
+![descript](/others/月亮先生传/20240217201013_134.png)
 
 ### 打飞机累了也换手吗？
 
-![descript](others\月亮先生传\20240217201013_135.png)
+![descript](/others/月亮先生传/20240217201013_135.png)
 
 ### 我不管E5就是洋垃圾
 
-![descript](others\月亮先生传\20240217201013_136.png)
+![descript](/others/月亮先生传/20240217201013_136.png)
 
-![descript](others\月亮先生传\20240217201013_137.png)
+![descript](/others/月亮先生传/20240217201013_137.png)
 
-![descript](others\月亮先生传\20240217201013_138.png)
+![descript](/others/月亮先生传/20240217201013_138.png)
 
 ### 你00后吗
 
-![descript](others\月亮先生传\20240217201013_139.png)
+![descript](/others/月亮先生传/20240217201013_139.png)
 
-![descript](others\月亮先生传\20240217201013_140.png)
+![descript](/others/月亮先生传/20240217201013_140.png)
 
-![descript](others\月亮先生传\20240217201013_141.png)
+![descript](/others/月亮先生传/20240217201013_141.png)
 
 ### 我不管 我看E5就是洋垃圾
 
-![descript](others\月亮先生传\20240217201013_142.png)
+![descript](/others/月亮先生传/20240217201013_142.png)
 
 ### 选择性失明
 
-![descript](others\月亮先生传\20240217201013_143.png)
+![descript](/others/月亮先生传/20240217201013_143.png)
 
-![descript](others\月亮先生传\20240217201013_144.png)
+![descript](/others/月亮先生传/20240217201013_144.png)
 
 # 这不得分享分享
 
 一些观后感:
 
-![descript](others\月亮先生传\20240217201013_145.png)
+![descript](/others/月亮先生传/20240217201013_145.png)
 
-![descript](others\月亮先生传\20240217201013_146.png)
+![descript](/others/月亮先生传/20240217201013_146.png)
 
-![descript](others\月亮先生传\20240217201013_147.png)
+![descript](/others/月亮先生传/20240217201013_147.png)
 
-![descript](others\月亮先生传\20240217201013_148.png)
+![descript](/others/月亮先生传/20240217201013_148.png)
 
-![descript](others\月亮先生传\20240217201013_149.png)
+![descript](/others/月亮先生传/20240217201013_149.png)
 
-![descript](others\月亮先生传\20240217201013_150.png)
+![descript](/others/月亮先生传/20240217201013_150.png)
 
-![descript](others\月亮先生传\20240217201013_151.png)
+![descript](/others/月亮先生传/20240217201013_151.png)
 
 PS：这位星铁哥分析错了，通过盒显示确实是23捏（编者1337注
 
-![descript](others\月亮先生传\20240217201013_152.png)
+![descript](/others/月亮先生传/20240217201013_152.png)
 
-![descript](others\月亮先生传\20240217201013_153.png)
+![descript](/others/月亮先生传/20240217201013_153.png)
 
-![descript](others\月亮先生传\20240217201013_154.png)
+![descript](/others/月亮先生传/20240217201013_154.png)
 
-![descript](others\月亮先生传\20240217201013_155.png)
+![descript](/others/月亮先生传/20240217201013_155.png)
 
-![descript](others\月亮先生传\20240217201013_156.png)
+![descript](/others/月亮先生传/20240217201013_156.png)
 
-![descript](others\月亮先生传\20240217201013_157.png)
+![descript](/others/月亮先生传/20240217201013_157.png)
 
-![descript](others\月亮先生传\20240217201013_158.png)
+![descript](/others/月亮先生传/20240217201013_158.png)
 
-![descript](others\月亮先生传\20240217201013_159.png)
+![descript](/others/月亮先生传/20240217201013_159.png)
 
-![descript](others\月亮先生传\20240217201013_160.png)
+![descript](/others/月亮先生传/20240217201013_160.png)
 
-![descript](others\月亮先生传\20240217201013_161.png)
+![descript](/others/月亮先生传/20240217201013_161.png)
 
-![descript](others\月亮先生传\20240217201013_162.png)
+![descript](/others/月亮先生传/20240217201013_162.png)
 
-![descript](others\月亮先生传\20240217201013_163.png)
+![descript](/others/月亮先生传/20240217201013_163.png)
 
-![descript](others\月亮先生传\20240217201013_164.png)
+![descript](/others/月亮先生传/20240217201013_164.png)
 
-![descript](others\月亮先生传\20240217201013_165.png)
+![descript](/others/月亮先生传/20240217201013_165.png)
 
-![descript](others\月亮先生传\20240217201013_166.png)
+![descript](/others/月亮先生传/20240217201013_166.png)
 
-![descript](others\月亮先生传\20240217201013_167.png)
+![descript](/others/月亮先生传/20240217201013_167.png)
 
