--- a/docs/article/袁纸列传.md
+++ b/docs/article/袁纸列传.md
@@ -6,105 +6,105 @@
 
 # 前情提要
 
-![descript](\others\袁纸列传\20240217210501_0.jpeg)
+![descript](/others/袁纸列传/20240217210501_0.jpeg)
 
 ## 别人提问的问题转头问其他群
 
-![descript](\others\袁纸列传\20240217210501_1.png)
+![descript](/others/袁纸列传/20240217210501_1.png)
 
-![descript](\others\袁纸列传\20240217210501_2.png)
+![descript](/others/袁纸列传/20240217210501_2.png)
 
 # 开始
 
-![descript](\others\袁纸列传\20240217210501_3.png)
+![descript](/others/袁纸列传/20240217210501_3.png)
 
-![descript](\others\袁纸列传\20240217210501_4.png)
+![descript](/others/袁纸列传/20240217210501_4.png)
 
-![descript](\others\袁纸列传\20240217210501_5.png)
+![descript](/others/袁纸列传/20240217210501_5.png)
 
-![descript](\others\袁纸列传\20240217210501_6.png)
+![descript](/others/袁纸列传/20240217210501_6.png)
 
-![descript](\others\袁纸列传\20240217210501_7.png)
+![descript](/others/袁纸列传/20240217210501_7.png)
 
-![descript](\others\袁纸列传\20240217210501_8.png)
+![descript](/others/袁纸列传/20240217210501_8.png)
 
-![descript](\others\袁纸列传\20240217210501_9.png)
+![descript](/others/袁纸列传/20240217210501_9.png)
 
-![descript](\others\袁纸列传\20240217210501_10.png)
+![descript](/others/袁纸列传/20240217210501_10.png)
 
-![descript](\others\袁纸列传\20240217210501_11.png)
+![descript](/others/袁纸列传/20240217210501_11.png)
 
-![descript](\others\袁纸列传\20240217210501_12.png)
+![descript](/others/袁纸列传/20240217210501_12.png)
 
-![descript](\others\袁纸列传\20240217210501_13.png)
+![descript](/others/袁纸列传/20240217210501_13.png)
 
-![descript](\others\袁纸列传\20240217210501_14.png)
+![descript](/others/袁纸列传/20240217210501_14.png)
 
-![descript](\others\袁纸列传\20240217210501_15.png)
+![descript](/others/袁纸列传/20240217210501_15.png)
 
-![descript](\others\袁纸列传\20240217210501_16.png)
+![descript](/others/袁纸列传/20240217210501_16.png)
 
-![descript](\others\袁纸列传\20240217210501_17.png)
+![descript](/others/袁纸列传/20240217210501_17.png)
 
-![descript](\others\袁纸列传\20240217210501_18.png)
+![descript](/others/袁纸列传/20240217210501_18.png)
 
-![descript](\others\袁纸列传\20240217210501_19.png)
+![descript](/others/袁纸列传/20240217210501_19.png)
 
-![descript](\others\袁纸列传\20240217210501_20.png)
+![descript](/others/袁纸列传/20240217210501_20.png)
 
-![descript](\others\袁纸列传\20240217210501_21.png)
+![descript](/others/袁纸列传/20240217210501_21.png)
 
-![descript](\others\袁纸列传\20240217210501_22.png)
+![descript](/others/袁纸列传/20240217210501_22.png)
 
-![descript](\others\袁纸列传\20240217210501_23.png)
+![descript](/others/袁纸列传/20240217210501_23.png)
 
-![descript](\others\袁纸列传\20240217210501_24.png)
+![descript](/others/袁纸列传/20240217210501_24.png)
 
-![descript](\others\袁纸列传\20240217210501_25.png)
+![descript](/others/袁纸列传/20240217210501_25.png)
 
-![descript](\others\袁纸列传\20240217210501_26.png)
+![descript](/others/袁纸列传/20240217210501_26.png)
 
-![descript](\others\袁纸列传\20240217210501_27.png)
+![descript](/others/袁纸列传/20240217210501_27.png)
 
-![descript](\others\袁纸列传\20240217210501_28.png)
+![descript](/others/袁纸列传/20240217210501_28.png)
 
-![descript](\others\袁纸列传\20240217210501_29.png)
+![descript](/others/袁纸列传/20240217210501_29.png)
 
-![descript](\others\袁纸列传\20240217210501_30.png)
+![descript](/others/袁纸列传/20240217210501_30.png)
 
-![descript](\others\袁纸列传\20240217210501_31.png)
+![descript](/others/袁纸列传/20240217210501_31.png)
 
-![descript](\others\袁纸列传\20240217210501_32.png)
+![descript](/others/袁纸列传/20240217210501_32.png)
 
-![descript](\others\袁纸列传\20240217210501_33.png)
+![descript](/others/袁纸列传/20240217210501_33.png)
 
-![descript](\others\袁纸列传\20240217210501_34.png)
+![descript](/others/袁纸列传/20240217210501_34.png)
 
-![descript](\others\袁纸列传\20240217210501_35.png)
+![descript](/others/袁纸列传/20240217210501_35.png)
 
-![descript](\others\袁纸列传\20240217210501_36.png)
+![descript](/others/袁纸列传/20240217210501_36.png)
 
-![descript](\others\袁纸列传\20240217210501_37.png)
+![descript](/others/袁纸列传/20240217210501_37.png)
 
-![descript](\others\袁纸列传\20240217210501_38.png)
+![descript](/others/袁纸列传/20240217210501_38.png)
 
-![descript](\others\袁纸列传\20240217210501_39.png)
+![descript](/others/袁纸列传/20240217210501_39.png)
 
-![descript](\others\袁纸列传\20240217210501_40.png)
+![descript](/others/袁纸列传/20240217210501_40.png)
 
-![descript](\others\袁纸列传\20240217210501_41.png)
+![descript](/others/袁纸列传/20240217210501_41.png)
 
-![descript](\others\袁纸列传\20240217210501_42.png)
+![descript](/others/袁纸列传/20240217210501_42.png)
 
-![descript](\others\袁纸列传\20240217210501_43.png)
+![descript](/others/袁纸列传/20240217210501_43.png)
 
-![descript](\others\袁纸列传\20240217210501_44.png)
+![descript](/others/袁纸列传/20240217210501_44.png)
 
-![descript](\others\袁纸列传\20240217210501_45.png)
+![descript](/others/袁纸列传/20240217210501_45.png)
 
-![descript](\others\袁纸列传\20240217210501_46.png)
+![descript](/others/袁纸列传/20240217210501_46.png)
 
-![descript](\others\袁纸列传\20240217210501_47.png)
+![descript](/others/袁纸列传/20240217210501_47.png)
 
 驿站想了想
 
@@ -116,373 +116,373 @@
 
 # 长图一
 
-![descript](\others\袁纸列传\20240217210501_48.jpeg)
+![descript](/others/袁纸列传/20240217210501_48.jpeg)
 
-![descript](\others\袁纸列传\20240217210501_49.jpeg)
+![descript](/others/袁纸列传/20240217210501_49.jpeg)
 
 # 长图二
 
-![descript](\others\袁纸列传\20240217210501_50.jpeg)
+![descript](/others/袁纸列传/20240217210501_50.jpeg)
 
-![descript](\others\袁纸列传\20240217210501_51.jpeg)
+![descript](/others/袁纸列传/20240217210501_51.jpeg)
 
 # 长图三
 
-![descript](\others\袁纸列传\20240217210501_52.jpeg)
+![descript](/others/袁纸列传/20240217210501_52.jpeg)
 
-![descript](\others\袁纸列传\20240217210501_53.jpeg)
+![descript](/others/袁纸列传/20240217210501_53.jpeg)
 
 # 长图四
 
-![descript](\others\袁纸列传\20240217210501_54.jpeg)
+![descript](/others/袁纸列传/20240217210501_54.jpeg)
 
-![descript](\others\袁纸列传\20240217210501_55.jpeg)
+![descript](/others/袁纸列传/20240217210501_55.jpeg)
 
 这是text\.cpp的内容
 
-![descript](\others\袁纸列传\20240217210501_56.png)
+![descript](/others/袁纸列传/20240217210501_56.png)
 
 # 长图五
 
-![descript](\others\袁纸列传\20240217210501_57.jpeg)
+![descript](/others/袁纸列传/20240217210501_57.jpeg)
 
-![descript](\others\袁纸列传\20240217210501_58.jpeg)
+![descript](/others/袁纸列传/20240217210501_58.jpeg)
 
 # 长图六
 
-![descript](\others\袁纸列传\20240217210501_59.jpeg)
+![descript](/others/袁纸列传/20240217210501_59.jpeg)
 
-![descript](\others\袁纸列传\20240217210501_60.jpeg)
+![descript](/others/袁纸列传/20240217210501_60.jpeg)
 
 酒酿小袁纸发的矩阵转换\.cpp内容
 
-![descript](\others\袁纸列传\20240217210501_61.png)
+![descript](/others/袁纸列传/20240217210501_61.png)
 
 # 长图七
 
-![descript](\others\袁纸列传\20240217210501_62.jpeg)
+![descript](/others/袁纸列传/20240217210501_62.jpeg)
 
-![descript](\others\袁纸列传\20240217210501_63.jpeg)
+![descript](/others/袁纸列传/20240217210501_63.jpeg)
 
 # 长图八
 
-![descript](\others\袁纸列传\20240217210501_64.jpeg)
+![descript](/others/袁纸列传/20240217210501_64.jpeg)
 
-![descript](\others\袁纸列传\20240217210501_65.jpeg)
+![descript](/others/袁纸列传/20240217210501_65.jpeg)
 
 # 长图九
 
-![descript](\others\袁纸列传\20240217210501_66.jpeg)
+![descript](/others/袁纸列传/20240217210501_66.jpeg)
 
-![descript](\others\袁纸列传\20240217210501_67.jpeg)
+![descript](/others/袁纸列传/20240217210501_67.jpeg)
 
 # 长图十
 
-![descript](\others\袁纸列传\20240217210501_68.jpeg)
+![descript](/others/袁纸列传/20240217210501_68.jpeg)
 
 # 服务器群消息
 
 ## 2023\-7\-15
 
-![descript](\others\袁纸列传\20240217210501_69.png)
+![descript](/others/袁纸列传/20240217210501_69.png)
 
-![descript](\others\袁纸列传\20240217210501_70.png)
+![descript](/others/袁纸列传/20240217210501_70.png)
 
 ### 生电用catserver 高性能
 
-![descript](\others\袁纸列传\20240217210501_71.png)
+![descript](/others/袁纸列传/20240217210501_71.png)
 
-![descript](\others\袁纸列传\20240217210501_72.png)
+![descript](/others/袁纸列传/20240217210501_72.png)
 
-![descript](\others\袁纸列传\20240217210501_73.png)
+![descript](/others/袁纸列传/20240217210501_73.png)
 
 ### folia怎么用（好像是这意思）
 
-![descript](\others\袁纸列传\20240217210501_74.png)
+![descript](/others/袁纸列传/20240217210501_74.png)
 
 ### Folia有的插件报错
 
-![descript](\others\袁纸列传\20240217210501_75.png)
+![descript](/others/袁纸列传/20240217210501_75.png)
 
 ### 生电服整优先队列
 
-![descript](\others\袁纸列传\20240217210501_76.png)
+![descript](/others/袁纸列传/20240217210501_76.png)
 
 ### 规划未来folia\+bc
 
-![descript](\others\袁纸列传\20240217210501_77.png)
+![descript](/others/袁纸列传/20240217210501_77.png)
 
 ### NLP学了一点点
 
-![descript](\others\袁纸列传\20240217210501_78.png)
+![descript](/others/袁纸列传/20240217210501_78.png)
 
-![descript](\others\袁纸列传\20240217210501_79.png)
+![descript](/others/袁纸列传/20240217210501_79.png)
 
-![descript](\others\袁纸列传\20240217210501_80.png)
+![descript](/others/袁纸列传/20240217210501_80.png)
 
-![descript](\others\袁纸列传\20240217210501_81.png)
+![descript](/others/袁纸列传/20240217210501_81.png)
 
-![descript](\others\袁纸列传\20240217210501_82.png)
+![descript](/others/袁纸列传/20240217210501_82.png)
 
-![descript](\others\袁纸列传\20240217210501_83.png)
+![descript](/others/袁纸列传/20240217210501_83.png)
 
-![descript](\others\袁纸列传\20240217210501_84.png)
+![descript](/others/袁纸列传/20240217210501_84.png)
 
-![descript](\others\袁纸列传\20240217210501_85.png)
+![descript](/others/袁纸列传/20240217210501_85.png)
 
-![descript](\others\袁纸列传\20240217210501_86.png)
+![descript](/others/袁纸列传/20240217210501_86.png)
 
 ### 主角是初中生
 
-![descript](\others\袁纸列传\20240217210501_87.png)
+![descript](/others/袁纸列传/20240217210501_87.png)
 
 ### 吾主心澈如明镜
 
-![descript](\others\袁纸列传\20240217210501_88.png)
+![descript](/others/袁纸列传/20240217210501_88.png)
 
-![descript](\others\袁纸列传\20240217210501_89.png)
+![descript](/others/袁纸列传/20240217210501_89.png)
 
-![descript](\others\袁纸列传\20240217210501_90.png)
+![descript](/others/袁纸列传/20240217210501_90.png)
 
 ### 新内鬼清心绪入群
 
-![descript](\others\袁纸列传\20240217210501_91.png)
+![descript](/others/袁纸列传/20240217210501_91.png)
 
-![descript](\others\袁纸列传\20240217210501_92.png)
+![descript](/others/袁纸列传/20240217210501_92.png)
 
-![descript](\others\袁纸列传\20240217210501_93.png)
+![descript](/others/袁纸列传/20240217210501_93.png)
 
 ### 补充战力
 
-![descript](\others\袁纸列传\20240217210501_94.png)
+![descript](/others/袁纸列传/20240217210501_94.png)
 
 ### 到底装没装via（恼）
 
-![descript](\others\袁纸列传\20240217210501_95.png)
+![descript](/others/袁纸列传/20240217210501_95.png)
 
-![descript](\others\袁纸列传\20240217210501_96.png)
+![descript](/others/袁纸列传/20240217210501_96.png)
 
 ### 你会破解网易也可以进咱服
 
-![descript](\others\袁纸列传\20240217210501_97.png)
+![descript](/others/袁纸列传/20240217210501_97.png)
 
-![descript](\others\袁纸列传\20240217210501_98.png)
+![descript](/others/袁纸列传/20240217210501_98.png)
 
-![descript](\others\袁纸列传\20240217210501_99.png)
+![descript](/others/袁纸列传/20240217210501_99.png)
 
 ### 可怜你，我整间歇泉
 
 至少他知道个geyser
 
-![descript](\others\袁纸列传\20240217210501_100.png)
+![descript](/others/袁纸列传/20240217210501_100.png)
 
-![descript](\others\袁纸列传\20240217210501_101.png)
+![descript](/others/袁纸列传/20240217210501_101.png)
 
-![descript](\others\袁纸列传\20240217210501_102.png)
+![descript](/others/袁纸列传/20240217210501_102.png)
 
 ### 意图让主角写插件
 
-![descript](\others\袁纸列传\20240217210501_103.png)
+![descript](/others/袁纸列传/20240217210501_103.png)
 
 ### 机智 我不重复造轮子
 
-![descript](\others\袁纸列传\20240217210501_104.png)
+![descript](/others/袁纸列传/20240217210501_104.png)
 
-![descript](\others\袁纸列传\20240217210501_105.png)
+![descript](/others/袁纸列传/20240217210501_105.png)
 
 ### 旧事重提
 
 先看私聊 咱主撅的诡计
 
-![descript](\others\袁纸列传\20240217210501_106.png)
+![descript](/others/袁纸列传/20240217210501_106.png)
 
-![descript](\others\袁纸列传\20240217210501_107.jpeg)
+![descript](/others/袁纸列传/20240217210501_107.jpeg)
 
-![descript](\others\袁纸列传\20240217210501_108.png)
+![descript](/others/袁纸列传/20240217210501_108.png)
 
-![descript](\others\袁纸列传\20240217210501_109.png)
+![descript](/others/袁纸列传/20240217210501_109.png)
 
 ### 旧事重重提
 
-![descript](\others\袁纸列传\20240217210501_110.png)
+![descript](/others/袁纸列传/20240217210501_110.png)
 
 引人把他当猴耍
 
 具体可见顶上的部分
 
-![descript](\others\袁纸列传\20240217210501_111.png)
+![descript](/others/袁纸列传/20240217210501_111.png)
 
-![descript](\others\袁纸列传\20240217210501_112.png)
+![descript](/others/袁纸列传/20240217210501_112.png)
 
-![descript](\others\袁纸列传\20240217210501_113.png)
+![descript](/others/袁纸列传/20240217210501_113.png)
 
-![descript](\others\袁纸列传\20240217210501_114.png)
+![descript](/others/袁纸列传/20240217210501_114.png)
 
 ### 旧事重重重提
 
 之精通c\+\+
 
-![descript](\others\袁纸列传\20240217210501_115.png)
+![descript](/others/袁纸列传/20240217210501_115.png)
 
-![descript](\others\袁纸列传\20240217210501_116.png)
+![descript](/others/袁纸列传/20240217210501_116.png)
 
 ### 自 知 之 明 （？）
 
-![descript](\others\袁纸列传\20240217210501_117.png)
+![descript](/others/袁纸列传/20240217210501_117.png)
 
 嗯,破解一下PCL2的序列号而已
 
 ### 兄 对着内鬼热心是没有结果的
 
-![descript](\others\袁纸列传\20240217210501_118.png)
+![descript](/others/袁纸列传/20240217210501_118.png)
 
-![descript](\others\袁纸列传\20240217210501_119.png)
+![descript](/others/袁纸列传/20240217210501_119.png)
 
-![descript](\others\袁纸列传\20240217210501_120.png)
+![descript](/others/袁纸列传/20240217210501_120.png)
 
-![descript](\others\袁纸列传\20240217210501_121.png)
+![descript](/others/袁纸列传/20240217210501_121.png)
 
-![descript](\others\袁纸列传\20240217210501_122.png)
+![descript](/others/袁纸列传/20240217210501_122.png)
 
 ### 英特尔15代CPU比5950X好
 
 15代？ 现在是2023
 
-![descript](\others\袁纸列传\20240217210501_123.png)
+![descript](/others/袁纸列传/20240217210501_123.png)
 
-![descript](\others\袁纸列传\20240217210501_124.png)
+![descript](/others/袁纸列传/20240217210501_124.png)
 
 ### 突然主播
 
-![descript](\others\袁纸列传\20240217210501_125.png)
+![descript](/others/袁纸列传/20240217210501_125.png)
 
-![descript](\others\袁纸列传\20240217210501_126.png)
+![descript](/others/袁纸列传/20240217210501_126.png)
 
 ### 大号与小号的聊天
 
 你倒是装的像点
 
-![descript](\others\袁纸列传\20240217210501_127.png)
+![descript](/others/袁纸列传/20240217210501_127.png)
 
-![descript](\others\袁纸列传\20240217210501_128.png)
+![descript](/others/袁纸列传/20240217210501_128.png)
 
-![descript](\others\袁纸列传\20240217210501_129.jpeg)
+![descript](/others/袁纸列传/20240217210501_129.jpeg)
 
 ### 一线之明
 
-![descript](\others\袁纸列传\20240217210501_130.png)
+![descript](/others/袁纸列传/20240217210501_130.png)
 
-![descript](\others\袁纸列传\20240217210501_131.png)
+![descript](/others/袁纸列传/20240217210501_131.png)
 
-![descript](\others\袁纸列传\20240217210501_132.png)
+![descript](/others/袁纸列传/20240217210501_132.png)
 
-![descript](\others\袁纸列传\20240217210501_133.png)
+![descript](/others/袁纸列传/20240217210501_133.png)
 
 ### 出色的反内鬼意识
 
-![descript](\others\袁纸列传\20240217210501_134.png)
+![descript](/others/袁纸列传/20240217210501_134.png)
 
 ### kernelpanic是把内存拔了
 
-![descript](\others\袁纸列传\20240217210501_135.png)
+![descript](/others/袁纸列传/20240217210501_135.png)
 
 ### 新内鬼️꯭Τ️꯭ǎ️꯭l️꯭êиt$入群
 
-![descript](\others\袁纸列传\20240217210501_136.png)
+![descript](/others/袁纸列传/20240217210501_136.png)
 
-![descript](\others\袁纸列传\20240217210501_137.png)
+![descript](/others/袁纸列传/20240217210501_137.png)
 
 ### 优秀的反内鬼意识
 
-![descript](\others\袁纸列传\20240217210501_138.png)
+![descript](/others/袁纸列传/20240217210501_138.png)
 
-![descript](\others\袁纸列传\20240217210501_139.png)
+![descript](/others/袁纸列传/20240217210501_139.png)
 
 ### 比咱更好的素质
 
 看来写文档的我真是太煞笔了
 
-![descript](\others\袁纸列传\20240217210501_140.png)
+![descript](/others/袁纸列传/20240217210501_140.png)
 
 ### 解释人脑诺伊曼
 
-![descript](\others\袁纸列传\20240217210501_141.png)
+![descript](/others/袁纸列传/20240217210501_141.png)
 
 ### 解释主播外号
 
-![descript](\others\袁纸列传\20240217210501_142.png)
+![descript](/others/袁纸列传/20240217210501_142.png)
 
-![descript](\others\袁纸列传\20240217210501_143.png)
+![descript](/others/袁纸列传/20240217210501_143.png)
 
 ### 猜疑链
 
-![descript](\others\袁纸列传\20240217210501_144.png)
+![descript](/others/袁纸列传/20240217210501_144.png)
 
-![descript](\others\袁纸列传\20240217210501_145.png)
+![descript](/others/袁纸列传/20240217210501_145.png)
 
 ### 自己没本事，只会刁难别人
 
-![descript](\others\袁纸列传\20240217210501_146.png)
+![descript](/others/袁纸列传/20240217210501_146.png)
 
 ### 混合端上via的人才
 
-![descript](\others\袁纸列传\20240217210501_147.png)
+![descript](/others/袁纸列传/20240217210501_147.png)
 
 ### 内鬼晋升为管理
 
-![descript](\others\袁纸列传\20240217210501_148.png)
+![descript](/others/袁纸列传/20240217210501_148.png)
 
-![descript](\others\袁纸列传\20240217210501_149.png)
+![descript](/others/袁纸列传/20240217210501_149.png)
 
 私聊
 
-![descript](\others\袁纸列传\20240217210501_150.png)
+![descript](/others/袁纸列传/20240217210501_150.png)
 
 ### 突然演技飙升
 
 之前故意不好好演的是吧
 
-![descript](\others\袁纸列传\20240217210501_151.png)
+![descript](/others/袁纸列传/20240217210501_151.png)
 
-![descript](\others\袁纸列传\20240217210501_152.png)
+![descript](/others/袁纸列传/20240217210501_152.png)
 
-![descript](\others\袁纸列传\20240217210501_153.png)
+![descript](/others/袁纸列传/20240217210501_153.png)
 
-![descript](\others\袁纸列传\20240217210501_154.png)
+![descript](/others/袁纸列传/20240217210501_154.png)
 
 ### 兼容网易 让网易启动器玩我服
 
-![descript](\others\袁纸列传\20240217210501_155.png)
+![descript](/others/袁纸列传/20240217210501_155.png)
 
 ### 你PCL赞助啊？
 
-![descript](\others\袁纸列传\20240217210501_156.png)
+![descript](/others/袁纸列传/20240217210501_156.png)
 
 我早赞助了 不知道有个群，今天才加上
 
 正好 主角好感\+10
 
-![descript](\others\袁纸列传\20240217210501_157.png)
+![descript](/others/袁纸列传/20240217210501_157.png)
 
 ### 我跟你说这里面有baka
 
-![descript](\others\袁纸列传\20240217210501_158.png)
+![descript](/others/袁纸列传/20240217210501_158.png)
 
 额。。。谢谢提醒？
 
-![descript](\others\袁纸列传\20240217210501_159.png)
+![descript](/others/袁纸列传/20240217210501_159.png)
 
 ### 一说主播我受不了
 
 昨天的事就好像昨天才发生一样
 
-![descript](\others\袁纸列传\20240217210501_160.png)
+![descript](/others/袁纸列传/20240217210501_160.png)
 
-![descript](\others\袁纸列传\20240217210501_161.png)
+![descript](/others/袁纸列传/20240217210501_161.png)
 
 ### 演的太好让主角道歉
 
-![descript](\others\袁纸列传\20240217210501_162.png)
+![descript](/others/袁纸列传/20240217210501_162.png)
 
 ### 支线\-PCLxB群
 
@@ -490,65 +490,65 @@
 
 从目录找PCLxB群
 
-![descript](\others\袁纸列传\20240217210501_163.png)
+![descript](/others/袁纸列传/20240217210501_163.png)
 
-![descript](\others\袁纸列传\20240217210501_164.png)
+![descript](/others/袁纸列传/20240217210501_164.png)
 
 ### 我为c\+\+至尊，当破解龙猫一切物
 
-![descript](\others\袁纸列传\20240217210501_165.png)
+![descript](/others/袁纸列传/20240217210501_165.png)
 
 ### 甄别内鬼
 
-![descript](\others\袁纸列传\20240217210501_166.png)
+![descript](/others/袁纸列传/20240217210501_166.png)
 
-![descript](\others\袁纸列传\20240217210501_167.png)
+![descript](/others/袁纸列传/20240217210501_167.png)
 
-![descript](\others\袁纸列传\20240217210501_168.png)
+![descript](/others/袁纸列传/20240217210501_168.png)
 
-![descript](\others\袁纸列传\20240217210501_169.png)
+![descript](/others/袁纸列传/20240217210501_169.png)
 
-![descript](\others\袁纸列传\20240217210501_170.png)
+![descript](/others/袁纸列传/20240217210501_170.png)
 
 ### 炫耀个淬炼
 
-![descript](\others\袁纸列传\20240217210501_171.png)
+![descript](/others/袁纸列传/20240217210501_171.png)
 
-![descript](\others\袁纸列传\20240217210501_172.png)
+![descript](/others/袁纸列传/20240217210501_172.png)
 
 私聊
 
-![descript](\others\袁纸列传\20240217210501_173.png)
+![descript](/others/袁纸列传/20240217210501_173.png)
 
 ### 没名字的被踢出
 
 对不起,没名字先生，其实群里没你
 
-![descript](\others\袁纸列传\20240217210501_174.png)
+![descript](/others/袁纸列传/20240217210501_174.png)
 
 ### 主角共赞助90多块
 
-![descript](\others\袁纸列传\20240217210501_175.png)
+![descript](/others/袁纸列传/20240217210501_175.png)
 
 ### 驿站晋升管理
 
-![descript](\others\袁纸列传\20240217210501_176.png)
+![descript](/others/袁纸列传/20240217210501_176.png)
 
 私聊
 
-![descript](\others\袁纸列传\20240217210501_177.png)
+![descript](/others/袁纸列传/20240217210501_177.png)
 
-![descript](\others\袁纸列传\20240217210501_178.png)
+![descript](/others/袁纸列传/20240217210501_178.png)
 
-![descript](\others\袁纸列传\20240217210501_179.png)
+![descript](/others/袁纸列传/20240217210501_179.png)
 
-![descript](\others\袁纸列传\20240217210501_180.png)
+![descript](/others/袁纸列传/20240217210501_180.png)
 
-![descript](\others\袁纸列传\20240217210501_181.png)
+![descript](/others/袁纸列传/20240217210501_181.png)
 
-![descript](\others\袁纸列传\20240217210501_182.png)
+![descript](/others/袁纸列传/20240217210501_182.png)
 
-![descript](\others\袁纸列传\20240217210501_183.png)
+![descript](/others/袁纸列传/20240217210501_183.png)
 
 插一条聊天记录
 
@@ -556,189 +556,189 @@
 
 结果你个锟斤拷直接加群？\(ง •̀\_•́\)ง
 
-![descript](\others\袁纸列传\20240217210501_184.png)
+![descript](/others/袁纸列传/20240217210501_184.png)
 
 这个问题内鬼直接问去了
 
-![descript](\others\袁纸列传\20240217210501_185.png)
+![descript](/others/袁纸列传/20240217210501_185.png)
 
-![descript](\others\袁纸列传\20240217210501_186.png)
+![descript](/others/袁纸列传/20240217210501_186.png)
 
-![descript](\others\袁纸列传\20240217210501_187.png)
+![descript](/others/袁纸列传/20240217210501_187.png)
 
 ### 自己什么不会甩给我是吧
 
-![descript](\others\袁纸列传\20240217210501_188.png)
+![descript](/others/袁纸列传/20240217210501_188.png)
 
 ### 新内鬼西米和Xiao\_mckedou233入群
 
-![descript](\others\袁纸列传\20240217210501_189.png)
+![descript](/others/袁纸列传/20240217210501_189.png)
 
-![descript](\others\袁纸列传\20240217210501_190.png)
+![descript](/others/袁纸列传/20240217210501_190.png)
 
 ### 锟斤拷是吧
 
-![descript](\others\袁纸列传\20240217210501_191.png)
+![descript](/others/袁纸列传/20240217210501_191.png)
 
-![descript](\others\袁纸列传\20240217210501_192.png)
+![descript](/others/袁纸列传/20240217210501_192.png)
 
-![descript](\others\袁纸列传\20240217210501_193.png)
+![descript](/others/袁纸列传/20240217210501_193.png)
 
-![descript](\others\袁纸列传\20240217210501_194.png)
+![descript](/others/袁纸列传/20240217210501_194.png)
 
-![descript](\others\袁纸列传\20240217210501_195.png)
+![descript](/others/袁纸列传/20240217210501_195.png)
 
-![descript](\others\袁纸列传\20240217210501_196.png)
+![descript](/others/袁纸列传/20240217210501_196.png)
 
-![descript](\others\袁纸列传\20240217210501_197.png)
+![descript](/others/袁纸列传/20240217210501_197.png)
 
-![descript](\others\袁纸列传\20240217210501_198.png)
+![descript](/others/袁纸列传/20240217210501_198.png)
 
-![descript](\others\袁纸列传\20240217210501_199.png)
+![descript](/others/袁纸列传/20240217210501_199.png)
 
-![descript](\others\袁纸列传\20240217210501_200.png)
+![descript](/others/袁纸列传/20240217210501_200.png)
 
-![descript](\others\袁纸列传\20240217210501_201.png)
+![descript](/others/袁纸列传/20240217210501_201.png)
 
 ### *\[B线\]SSH蜜罐*
 
-![descript](\others\袁纸列传\20240217210501_202.png)
+![descript](/others/袁纸列传/20240217210501_202.png)
 
-![descript](\others\袁纸列传\20240217210501_203.png)
+![descript](/others/袁纸列传/20240217210501_203.png)
 
 私聊
 
-![descript](\others\袁纸列传\20240217210501_204.png)
+![descript](/others/袁纸列传/20240217210501_204.png)
 
-![descript](\others\袁纸列传\20240217210501_205.png)
+![descript](/others/袁纸列传/20240217210501_205.png)
 
-![descript](\others\袁纸列传\20240217210501_206.png)
+![descript](/others/袁纸列传/20240217210501_206.png)
 
 ### *\[土线\]后门插件\+op神器*
 
-![descript](\others\袁纸列传\20240217210501_207.png)
+![descript](/others/袁纸列传/20240217210501_207.png)
 
-![descript](\others\袁纸列传\20240217210501_208.png)
+![descript](/others/袁纸列传/20240217210501_208.png)
 
-![descript](\others\袁纸列传\20240217210501_209.png)
+![descript](/others/袁纸列传/20240217210501_209.png)
 
 ### 新内鬼酷热寒风入群
 
-![descript](\others\袁纸列传\20240217210501_210.png)
+![descript](/others/袁纸列传/20240217210501_210.png)
 
-![descript](\others\袁纸列传\20240217210501_211.png)
+![descript](/others/袁纸列传/20240217210501_211.png)
 
-![descript](\others\袁纸列传\20240217210501_212.png)
+![descript](/others/袁纸列传/20240217210501_212.png)
 
-![descript](\others\袁纸列传\20240217210501_213.jpeg)
+![descript](/others/袁纸列传/20240217210501_213.jpeg)
 
 ### 找不到控制台
 
-![descript](\others\袁纸列传\20240217210501_214.png)
+![descript](/others/袁纸列传/20240217210501_214.png)
 
-![descript](\others\袁纸列传\20240217210501_215.png)
+![descript](/others/袁纸列传/20240217210501_215.png)
 
 ### 会linux的帮帮
 
-![descript](\others\袁纸列传\20240217210501_216.png)
+![descript](/others/袁纸列传/20240217210501_216.png)
 
 ### 服务器被攻击装杀毒软件
 
-![descript](\others\袁纸列传\20240217210501_217.png)
+![descript](/others/袁纸列传/20240217210501_217.png)
 
 ### 委托我去查是不是内鬼
 
 太信任我了
 
-![descript](\others\袁纸列传\20240217210501_218.png)
+![descript](/others/袁纸列传/20240217210501_218.png)
 
-![descript](\others\袁纸列传\20240217210501_219.png)
+![descript](/others/袁纸列传/20240217210501_219.png)
 
-![descript](\others\袁纸列传\20240217210501_220.png)
+![descript](/others/袁纸列传/20240217210501_220.png)
 
-![descript](\others\袁纸列传\20240217210501_221.png)
+![descript](/others/袁纸列传/20240217210501_221.png)
 
-![descript](\others\袁纸列传\20240217210501_222.png)
+![descript](/others/袁纸列传/20240217210501_222.png)
 
 ### 现在vps也是咱内鬼提供的了
 
-![descript](\others\袁纸列传\20240217210501_223.png)
+![descript](/others/袁纸列传/20240217210501_223.png)
 
-![descript](\others\袁纸列传\20240217210501_224.png)
+![descript](/others/袁纸列传/20240217210501_224.png)
 
-![descript](\others\袁纸列传\20240217210501_225.png)
+![descript](/others/袁纸列传/20240217210501_225.png)
 
 ### 都要跟龙猫对着干了还玩夹子
 
-![descript](\others\袁纸列传\20240217210501_226.png)
+![descript](/others/袁纸列传/20240217210501_226.png)
 
-![descript](\others\袁纸列传\20240217210501_227.png)
+![descript](/others/袁纸列传/20240217210501_227.png)
 
 ### 到底vps还是本地啊
 
-![descript](\others\袁纸列传\20240217210501_228.png)
+![descript](/others/袁纸列传/20240217210501_228.png)
 
-![descript](\others\袁纸列传\20240217210501_229.png)
+![descript](/others/袁纸列传/20240217210501_229.png)
 
-![descript](\others\袁纸列传\20240217210501_230.png)
+![descript](/others/袁纸列传/20240217210501_230.png)
 
 ### 你这是要在vps上用内网穿透？
 
-![descript](\others\袁纸列传\20240217210501_231.png)
+![descript](/others/袁纸列传/20240217210501_231.png)
 
-![descript](\others\袁纸列传\20240217210501_232.png)
+![descript](/others/袁纸列传/20240217210501_232.png)
 
-![descript](\others\袁纸列传\20240217210501_233.png)
+![descript](/others/袁纸列传/20240217210501_233.png)
 
 ### 自己内网穿透都用不好
 
-![descript](\others\袁纸列传\20240217210501_234.png)
+![descript](/others/袁纸列传/20240217210501_234.png)
 
-![descript](\others\袁纸列传\20240217210501_235.png)
+![descript](/others/袁纸列传/20240217210501_235.png)
 
-![descript](\others\袁纸列传\20240217210501_236.png)
+![descript](/others/袁纸列传/20240217210501_236.png)
 
-![descript](\others\袁纸列传\20240217210501_237.png)
+![descript](/others/袁纸列传/20240217210501_237.png)
 
 ### 原来你的vps有公网！
 
-![descript](\others\袁纸列传\20240217210501_238.png)
+![descript](/others/袁纸列传/20240217210501_238.png)
 
-![descript](\others\袁纸列传\20240217210501_239.png)
+![descript](/others/袁纸列传/20240217210501_239.png)
 
-![descript](\others\袁纸列传\20240217210501_240.png)
+![descript](/others/袁纸列传/20240217210501_240.png)
 
 ### 给每个人创造
 
-![descript](\others\袁纸列传\20240217210501_241.png)
+![descript](/others/袁纸列传/20240217210501_241.png)
 
 ### 后门也准备好了
 
-![descript](\others\袁纸列传\20240217210501_242.png)
+![descript](/others/袁纸列传/20240217210501_242.png)
 
-![descript](\others\袁纸列传\20240217210501_243.png)
+![descript](/others/袁纸列传/20240217210501_243.png)
 
 ### 连不上
 
-![descript](\others\袁纸列传\20240217210501_244.png)
+![descript](/others/袁纸列传/20240217210501_244.png)
 
-![descript](\others\袁纸列传\20240217210501_245.png)
+![descript](/others/袁纸列传/20240217210501_245.png)
 
-![descript](\others\袁纸列传\20240217210501_246.png)
+![descript](/others/袁纸列传/20240217210501_246.png)
 
-![descript](\others\袁纸列传\20240217210501_247.png)
+![descript](/others/袁纸列传/20240217210501_247.png)
 
 ### 破案他serverip设置的老IP
 
 私聊
 
-![descript](\others\袁纸列传\20240217210501_248.png)
+![descript](/others/袁纸列传/20240217210501_248.png)
 
-![descript](\others\袁纸列传\20240217210501_249.png)
+![descript](/others/袁纸列传/20240217210501_249.png)
 
 ### 给他改好开服
 
-![descript](\others\袁纸列传\20240217210501_250.png)
+![descript](/others/袁纸列传/20240217210501_250.png)
 
 ### 都 是 优 化 插 件
 
@@ -748,61 +748,61 @@
 
 你特么睁眼说瞎话呢
 
-![descript](\others\袁纸列传\20240217210501_251.png)
+![descript](/others/袁纸列传/20240217210501_251.png)
 
-![descript](\others\袁纸列传\20240217210501_252.png)
+![descript](/others/袁纸列传/20240217210501_252.png)
 
 ### 可算开好了
 
-![descript](\others\袁纸列传\20240217210501_253.png)
+![descript](/others/袁纸列传/20240217210501_253.png)
 
 唉
 
 幸好 还有一手
 
-![descript](\others\袁纸列传\20240217210501_254.png)
+![descript](/others/袁纸列传/20240217210501_254.png)
 
 ### 仙之巅，傲世间！
 
-![descript](\others\袁纸列传\20240217210501_255.png)
+![descript](/others/袁纸列传/20240217210501_255.png)
 
-![descript](\others\袁纸列传\20240217210501_256.png)
+![descript](/others/袁纸列传/20240217210501_256.png)
 
 ## 2023\-7\-16
 
 ### 炸服
 
-![descript](\others\袁纸列传\20240217210501_257.png)
+![descript](/others/袁纸列传/20240217210501_257.png)
 
 ### 无政府与生电的辩论
 
-![descript](\others\袁纸列传\20240217210501_258.png)
+![descript](/others/袁纸列传/20240217210501_258.png)
 
-![descript](\others\袁纸列传\20240217210501_259.png)
+![descript](/others/袁纸列传/20240217210501_259.png)
 
-![descript](\others\袁纸列传\20240217210501_260.png)
+![descript](/others/袁纸列传/20240217210501_260.png)
 
 ### 艾特管理来投票
 
-![descript](\others\袁纸列传\20240217210501_261.png)
+![descript](/others/袁纸列传/20240217210501_261.png)
 
 ### 对着出生点伤心
 
-![descript](\others\袁纸列传\20240217210501_262.png)
+![descript](/others/袁纸列传/20240217210501_262.png)
 
 ### 有op但是只有紧急情况使用
 
 搞笑呢，能有什么紧急情况，生电机器炸了直接回档的
 
-![descript](\others\袁纸列传\20240217210501_263.png)
+![descript](/others/袁纸列传/20240217210501_263.png)
 
 ### 反作弊,卸载！
 
-![descript](\others\袁纸列传\20240217210501_264.png)
+![descript](/others/袁纸列传/20240217210501_264.png)
 
 ### 熟悉java，会解决故障
 
-![descript](\others\袁纸列传\20240217210501_265.png)
+![descript](/others/袁纸列传/20240217210501_265.png)
 
 ### 给人推荐n\+\+是吧
 
@@ -812,91 +812,91 @@
 
 具体可自行百度
 
-![descript](\others\袁纸列传\20240217210501_266.png)
+![descript](/others/袁纸列传/20240217210501_266.png)
 
 ### 破解版IDEA写bukkit优化插件
 
-![descript](\others\袁纸列传\20240217210501_267.png)
+![descript](/others/袁纸列传/20240217210501_267.png)
 
-![descript](\others\袁纸列传\20240217210501_268.png)
+![descript](/others/袁纸列传/20240217210501_268.png)
 
-![descript](\others\袁纸列传\20240217210501_269.png)
+![descript](/others/袁纸列传/20240217210501_269.png)
 
 ### 你写别的容易写出来漏洞
 
 你都知道那个地方有漏洞你还不修？
 
-![descript](\others\袁纸列传\20240217210501_270.png)
+![descript](/others/袁纸列传/20240217210501_270.png)
 
-![descript](\others\袁纸列传\20240217210501_271.png)
+![descript](/others/袁纸列传/20240217210501_271.png)
 
-![descript](\others\袁纸列传\20240217210501_272.png)
+![descript](/others/袁纸列传/20240217210501_272.png)
 
 ### 你大佬装小白是不是
 
-![descript](\others\袁纸列传\20240217210501_273.png)
+![descript](/others/袁纸列传/20240217210501_273.png)
 
 ### 中国人不用洋人操作系统
 
-![descript](\others\袁纸列传\20240217210501_274.png)
+![descript](/others/袁纸列传/20240217210501_274.png)
 
-![descript](\others\袁纸列传\20240217210501_275.png)
+![descript](/others/袁纸列传/20240217210501_275.png)
 
 ### 咱群个个都是隐藏的大佬啊
 
-![descript](\others\袁纸列传\20240217210501_276.png)
+![descript](/others/袁纸列传/20240217210501_276.png)
 
-![descript](\others\袁纸列传\20240217210501_277.png)
+![descript](/others/袁纸列传/20240217210501_277.png)
 
 ### 故意在这提问我十八
 
-![descript](\others\袁纸列传\20240217210501_278.png)
+![descript](/others/袁纸列传/20240217210501_278.png)
 
-![descript](\others\袁纸列传\20240217210501_279.png)
+![descript](/others/袁纸列传/20240217210501_279.png)
 
-![descript](\others\袁纸列传\20240217210501_280.png)
+![descript](/others/袁纸列传/20240217210501_280.png)
 
-![descript](\others\袁纸列传\20240217210501_281.png)
+![descript](/others/袁纸列传/20240217210501_281.png)
 
 ### 你别问弱智问题
 
-![descript](\others\袁纸列传\20240217210501_282.png)
+![descript](/others/袁纸列传/20240217210501_282.png)
 
 ### 大佬打算参加teacon吗
 
-![descript](\others\袁纸列传\20240217210501_283.png)
+![descript](/others/袁纸列传/20240217210501_283.png)
 
 ### 我初一马上初二了
 
-![descript](\others\袁纸列传\20240217210501_284.png)
+![descript](/others/袁纸列传/20240217210501_284.png)
 
 ### 破尘开始自爆
 
-![descript](\others\袁纸列传\20240217210501_285.png)
+![descript](/others/袁纸列传/20240217210501_285.png)
 
-![descript](\others\袁纸列传\20240217210501_286.png)
+![descript](/others/袁纸列传/20240217210501_286.png)
 
-![descript](\others\袁纸列传\20240217210501_287.png)
+![descript](/others/袁纸列传/20240217210501_287.png)
 
 ### 我noi擦边过的
 
-![descript](\others\袁纸列传\20240217210501_288.png)
+![descript](/others/袁纸列传/20240217210501_288.png)
 
-![descript](\others\袁纸列传\20240217210501_289.png)
+![descript](/others/袁纸列传/20240217210501_289.png)
 
-![descript](\others\袁纸列传\20240217210501_290.png)
+![descript](/others/袁纸列传/20240217210501_290.png)
 
 ### baka自爆
 
-![descript](\others\袁纸列传\20240217210501_291.png)
+![descript](/others/袁纸列传/20240217210501_291.png)
 
 ### 灵活的java熟练度
 
-![descript](\others\袁纸列传\20240217210501_292.png)
+![descript](/others/袁纸列传/20240217210501_292.png)
 
-![descript](\others\袁纸列传\20240217210501_293.png)
+![descript](/others/袁纸列传/20240217210501_293.png)
 
-![descript](\others\袁纸列传\20240217210501_294.png)
+![descript](/others/袁纸列传/20240217210501_294.png)
 
 后面还有 但是这都不再说话了没必要放了
 
@@ -904,33 +904,33 @@
 
 我一直看着呢，看到不说话了，决定再演一波
 
-![descript](\others\袁纸列传\20240217210501_295.png)
+![descript](/others/袁纸列传/20240217210501_295.png)
 
-![descript](\others\袁纸列传\20240217210501_296.png)
+![descript](/others/袁纸列传/20240217210501_296.png)
 
-![descript](\others\袁纸列传\20240217210501_297.png)
+![descript](/others/袁纸列传/20240217210501_297.png)
 
-![descript](\others\袁纸列传\20240217210501_298.png)
+![descript](/others/袁纸列传/20240217210501_298.png)
 
-![descript](\others\袁纸列传\20240217210501_299.png)
+![descript](/others/袁纸列传/20240217210501_299.png)
 
 woc不说话啊，emo去了？
 
 ### 内鬼一览
 
-![descript](\others\袁纸列传\20240217210501_300.png)
+![descript](/others/袁纸列传/20240217210501_300.png)
 
 ### 直接炸
 
-![descript](\others\袁纸列传\20240217210501_301.png)
+![descript](/others/袁纸列传/20240217210501_301.png)
 
-![descript](\others\袁纸列传\20240217210501_302.png)
+![descript](/others/袁纸列传/20240217210501_302.png)
 
-![descript](\others\袁纸列传\20240217210501_303.png)
+![descript](/others/袁纸列传/20240217210501_303.png)
 
 ### 解散群聊
 
-![descript](\others\袁纸列传\20240217210501_304.png)
+![descript](/others/袁纸列传/20240217210501_304.png)
 
 # 私聊信息
 
@@ -940,51 +940,51 @@ woc不说话啊，emo去了？
 
 还想着骗呢？
 
-![descript](\others\袁纸列传\20240217210501_305.png)
+![descript](/others/袁纸列传/20240217210501_305.png)
 
-![descript](\others\袁纸列传\20240217210501_306.png)
+![descript](/others/袁纸列传/20240217210501_306.png)
 
-![descript](\others\袁纸列传\20240217210501_307.png)
+![descript](/others/袁纸列传/20240217210501_307.png)
 
-![descript](\others\袁纸列传\20240217210501_308.png)
+![descript](/others/袁纸列传/20240217210501_308.png)
 
 ## 我给你个选择
 
-![descript](\others\袁纸列传\20240217210501_309.png)
+![descript](/others/袁纸列传/20240217210501_309.png)
 
 ## 我们本可以成为一个大佬，一个徒弟
 
 记住这句话，后面要考
 
-![descript](\others\袁纸列传\20240217210501_310.png)
+![descript](/others/袁纸列传/20240217210501_310.png)
 
 ## 主角成绩本来就不好
 
 经典剧情了
 
-![descript](\others\袁纸列传\20240217210501_311.png)
+![descript](/others/袁纸列传/20240217210501_311.png)
 
 ## 昨天和今天真是快乐啊
 
-![descript](\others\袁纸列传\20240217210501_312.png)
+![descript](/others/袁纸列传/20240217210501_312.png)
 
-![descript](\others\袁纸列传\20240217210501_313.png)
+![descript](/others/袁纸列传/20240217210501_313.png)
 
 ## 成功还能一半的
 
-![descript](\others\袁纸列传\20240217210501_314.png)
+![descript](/others/袁纸列传/20240217210501_314.png)
 
 ## 所以你是不打算带我喽？
 
-![descript](\others\袁纸列传\20240217210501_315.png)
+![descript](/others/袁纸列传/20240217210501_315.png)
 
 ## 嘴炮攻击过后
 
-![descript](\others\袁纸列传\20240217210501_316.png)
+![descript](/others/袁纸列传/20240217210501_316.png)
 
 ## 结局,主人公立志读书
 
-![descript](\others\袁纸列传\20240217210501_317.png)
+![descript](/others/袁纸列传/20240217210501_317.png)
 
 # PCLxB群
 
@@ -992,119 +992,119 @@ woc不说话啊，emo去了？
 
 ### 崩坏是高级游戏
 
-![descript](\others\袁纸列传\20240217210501_318.png)
+![descript](/others/袁纸列传/20240217210501_318.png)
 
-![descript](\others\袁纸列传\20240217210501_319.png)
+![descript](/others/袁纸列传/20240217210501_319.png)
 
-![descript](\others\袁纸列传\20240217210501_320.png)
+![descript](/others/袁纸列传/20240217210501_320.png)
 
 ### x5的群规就是废纸一张
 
-![descript](\others\袁纸列传\20240217210501_321.png)
+![descript](/others/袁纸列传/20240217210501_321.png)
 
-![descript](\others\袁纸列传\20240217210501_322.png)
+![descript](/others/袁纸列传/20240217210501_322.png)
 
 ### 昨天全群歧视我
 
 ### 旧事重重重重提
 
-![descript](\others\袁纸列传\20240217210501_323.png)
+![descript](/others/袁纸列传/20240217210501_323.png)
 
-![descript](\others\袁纸列传\20240217210501_324.png)
+![descript](/others/袁纸列传/20240217210501_324.png)
 
-![descript](\others\袁纸列传\20240217210501_325.png)
+![descript](/others/袁纸列传/20240217210501_325.png)
 
-![descript](\others\袁纸列传\20240217210501_326.png)
+![descript](/others/袁纸列传/20240217210501_326.png)
 
-![descript](\others\袁纸列传\20240217210501_327.png)
+![descript](/others/袁纸列传/20240217210501_327.png)
 
-![descript](\others\袁纸列传\20240217210501_328.png)
+![descript](/others/袁纸列传/20240217210501_328.png)
 
-![descript](\others\袁纸列传\20240217210501_329.png)
+![descript](/others/袁纸列传/20240217210501_329.png)
 
-![descript](\others\袁纸列传\20240217210501_330.png)
+![descript](/others/袁纸列传/20240217210501_330.png)
 
 ### 主撅登场
 
-![descript](\others\袁纸列传\20240217210501_331.png)
+![descript](/others/袁纸列传/20240217210501_331.png)
 
 ### 自信满满
 
-![descript](\others\袁纸列传\20240217210501_332.png)
+![descript](/others/袁纸列传/20240217210501_332.png)
 
-![descript](\others\袁纸列传\20240217210501_333.png)
+![descript](/others/袁纸列传/20240217210501_333.png)
 
-![descript](\others\袁纸列传\20240217210501_334.png)
+![descript](/others/袁纸列传/20240217210501_334.png)
 
 ### 希特l与斯大l互相评价
 
-![descript](\others\袁纸列传\20240217210501_335.png)
+![descript](/others/袁纸列传/20240217210501_335.png)
 
-![descript](\others\袁纸列传\20240217210501_336.png)
+![descript](/others/袁纸列传/20240217210501_336.png)
 
 ### 群主发言
 
-![descript](\others\袁纸列传\20240217210501_337.png)
+![descript](/others/袁纸列传/20240217210501_337.png)
 
-![descript](\others\袁纸列传\20240217210501_338.png)
+![descript](/others/袁纸列传/20240217210501_338.png)
 
 ### 不是破解是欺骗罗伯特
 
-![descript](\others\袁纸列传\20240217210501_339.png)
+![descript](/others/袁纸列传/20240217210501_339.png)
 
 ### 家长の约束
 
-![descript](\others\袁纸列传\20240217210501_340.png)
+![descript](/others/袁纸列传/20240217210501_340.png)
 
-![descript](\others\袁纸列传\20240217210501_341.png)
+![descript](/others/袁纸列传/20240217210501_341.png)
 
 ### 你这样子容易暴露我
 
 挡住也可能暴露啊
 
-![descript](\others\袁纸列传\20240217210501_342.png)
+![descript](/others/袁纸列传/20240217210501_342.png)
 
 ### 再次猜疑链
 
-![descript](\others\袁纸列传\20240217210501_343.png)
+![descript](/others/袁纸列传/20240217210501_343.png)
 
 ### 细说自己破解心路历程
 
-![descript](\others\袁纸列传\20240217210501_344.png)
+![descript](/others/袁纸列传/20240217210501_344.png)
 
-![descript](\others\袁纸列传\20240217210501_345.png)
+![descript](/others/袁纸列传/20240217210501_345.png)
 
 ### 我问你会不会吧
 
-![descript](\others\袁纸列传\20240217210501_346.png)
+![descript](/others/袁纸列传/20240217210501_346.png)
 
-![descript](\others\袁纸列传\20240217210501_347.png)
+![descript](/others/袁纸列传/20240217210501_347.png)
 
-![descript](\others\袁纸列传\20240217210501_348.png)
+![descript](/others/袁纸列传/20240217210501_348.png)
 
 ### 群主：PCL早期有加解密
 
-![descript](\others\袁纸列传\20240217210501_349.png)
+![descript](/others/袁纸列传/20240217210501_349.png)
 
-![descript](\others\袁纸列传\20240217210501_350.png)
+![descript](/others/袁纸列传/20240217210501_350.png)
 
-![descript](\others\袁纸列传\20240217210501_351.png)
+![descript](/others/袁纸列传/20240217210501_351.png)
 
-![descript](\others\袁纸列传\20240217210501_352.png)
+![descript](/others/袁纸列传/20240217210501_352.png)
 
 ### 主角被严重警告一次
 
-![descript](\others\袁纸列传\20240217210501_353.png)
+![descript](/others/袁纸列传/20240217210501_353.png)
 
-![descript](\others\袁纸列传\20240217210501_354.png)
+![descript](/others/袁纸列传/20240217210501_354.png)
 
-![descript](\others\袁纸列传\20240217210501_355.png)
+![descript](/others/袁纸列传/20240217210501_355.png)
 
-![descript](\others\袁纸列传\20240217210501_356.png)
+![descript](/others/袁纸列传/20240217210501_356.png)
 
-![descript](\others\袁纸列传\20240217210501_357.png)
+![descript](/others/袁纸列传/20240217210501_357.png)
 
-![descript](\others\袁纸列传\20240217210501_358.png)
+![descript](/others/袁纸列传/20240217210501_358.png)
 
 # MC服务器
 
@@ -1182,7 +1182,7 @@ https://search\.mcbbs\.net/thread\-823209\-1\-1\.html
 
 入服弹的
 
-![descript](\others\袁纸列传\20240217210501_359.png)
+![descript](/others/袁纸列传/20240217210501_359.png)
 
  
 
