--- a/docs/article/橘子树传.md
+++ b/docs/article/橘子树传.md
@@ -2,63 +2,63 @@
 
 前言
 
-![descript](others\橘子树传\20240217202255_0.png)
+![descript](/others/橘子树传/20240217202255_0.png)
 
 好群友拉我进了一个群，这群便是下文的橘子树studio
 
 第一天
 
-![descript](others\橘子树传\20240217202255_1.png)明文存储密码
+![descript](/others/橘子树传/20240217202255_1.png)明文存储密码
 
-![descript](others\橘子树传\20240217202255_2.png)http和ui放进一个线程
+![descript](/others/橘子树传/20240217202255_2.png)http和ui放进一个线程
 
-![descript](others\橘子树传\20240217202255_3.png)《我是管理员，但我没有实权》
+![descript](/others/橘子树传/20240217202255_3.png)《我是管理员，但我没有实权》
 
-![descript](others\橘子树传\20240217202255_4.png)《qt可不可以做到这样》\->应该做不到按钮重叠
+![descript](/others/橘子树传/20240217202255_4.png)《qt可不可以做到这样》\->应该做不到按钮重叠
 
-![descript](others\橘子树传\20240217202255_5.png)原来他是用winapi做的，但怎么像易语言呢（
+![descript](/others/橘子树传/20240217202255_5.png)原来他是用winapi做的，但怎么像易语言呢（
 
 第二天
 
-![descript](others\橘子树传\20240217202255_6.png)内鬼进群
+![descript](/others/橘子树传/20240217202255_6.png)内鬼进群
 
-![descript](others\橘子树传\20240217202255_7.png)
+![descript](/others/橘子树传/20240217202255_7.png)
 
 翻看群文件，发现第一次大会\.docx，看见他们还要变现项目（做的比屎还不如）甚至会议能支持420P！！！并且还要用易语言开发！！！（我不是歧视易语言，是有点震惊）
 
 第三天
 
-![descript](others\橘子树传\20240217202255_8.png)
+![descript](/others/橘子树传/20240217202255_8.png)
 
 站长要开始写加密算法了，但是站长好像一点算法都不会，AES\\RSA\\ECC都不会
 
-![descript](others\橘子树传\20240217202255_9.png)
+![descript](/others/橘子树传/20240217202255_9.png)
 
 乐昨天，把他exe弄了，得到api地址，然后刷api，站长把域名解析到gov
 
 第四天
 
-![descript](others\橘子树传\20240217202255_10.jpeg)   《站长开发了出了音乐软件！！！》
+![descript](/others/橘子树传/20240217202255_10.jpeg)   《站长开发了出了音乐软件！！！》
 
-![descript](others\橘子树传\20240217202255_11.png)![descript](others\橘子树传\20240217202255_11.png)
+![descript](/others/橘子树传/20240217202255_11.png)![descript](/others/橘子树传/20240217202255_11.png)
 
 站长的网页版上了，但是是轮询（？）
 
-![descript](others\橘子树传\20240217202255_12.png)没有cookie，照样进入站长的橘子树chat
+![descript](/others/橘子树传/20240217202255_12.png)没有cookie，照样进入站长的橘子树chat
 
 ======================================================================
 
-![descript](others\橘子树传\20240217202255_13.png)
+![descript](/others/橘子树传/20240217202255_13.png)
 
-![descript](others\橘子树传\20240217202255_14.png)逆天\!
+![descript](/others/橘子树传/20240217202255_14.png)逆天\!
 
-![descript](others\橘子树传\20240217202255_15.png)
+![descript](/others/橘子树传/20240217202255_15.png)
 
-![descript](others\橘子树传\20240217202255_16.png)
+![descript](/others/橘子树传/20240217202255_16.png)
 
-![descript](others\橘子树传\20240217202255_17.png)站长发信api使用user\+password进行鉴权
+![descript](/others/橘子树传/20240217202255_17.png)站长发信api使用user\+password进行鉴权
 
-![descript](others\橘子树传\20240217202255_18.png)
+![descript](/others/橘子树传/20240217202255_18.png)
 
 橘子树传 （原神版）
 
@@ -72,35 +72,35 @@
 
 ### 正文
 
-![descript](others\橘子树传\20240217202255_19.png)
+![descript](/others/橘子树传/20240217202255_19.png)
 
-![descript](others\橘子树传\20240217202255_20.png)
+![descript](/others/橘子树传/20240217202255_20.png)
 
 神权，启动！
 
-![descript](others\橘子树传\20240217202255_21.png)
+![descript](/others/橘子树传/20240217202255_21.png)
 
-![descript](others\橘子树传\20240217202255_22.png)
+![descript](/others/橘子树传/20240217202255_22.png)
 
 我不会JS，小刀开发的软件
 
-![descript](others\橘子树传\20240217202255_23.png)
+![descript](/others/橘子树传/20240217202255_23.png)
 
 拒绝申请，理由“别以为我不知道你是谁”，炸裂。
 
-![descript](others\橘子树传\20240217202255_24.png)
+![descript](/others/橘子树传/20240217202255_24.png)
 
 L\.I\.U\.X\.I\.A\.N\.G\.D\.O\.N\.G?
 
-![descript](others\橘子树传\20240217202255_25.png)
+![descript](/others/橘子树传/20240217202255_25.png)
 
 神权，启动！x2
 
-![descript](others\橘子树传\20240217202255_26.png)
+![descript](/others/橘子树传/20240217202255_26.png)
 
 17739764646
 
-我知道\.\.但是兄弟,为什么开你的户籍居然如此容易?![descript](others\橘子树传\20240217202255_27.png)
+我知道\.\.但是兄弟,为什么开你的户籍居然如此容易?![descript](/others/橘子树传/20240217202255_27.png)
 
 第二波卧底进卧底群，卧底群主准备拷打群管橘子树。
 
@@ -112,21 +112,21 @@ L\.I\.U\.X\.I\.A\.N\.G\.D\.O\.N\.G?
 
 ### 正文
 
-![descript](others\橘子树传\20240217202255_28.png)
+![descript](/others/橘子树传/20240217202255_28.png)
 
 希望友好一点
 
-![descript](others\橘子树传\20240217202255_29.png)
+![descript](/others/橘子树传/20240217202255_29.png)
 
 同是中国人，道德绑架
 
-![descript](others\橘子树传\20240217202255_30.png)
+![descript](/others/橘子树传/20240217202255_30.png)
 
 纳西妲般的比喻，炸裂
 
 扣字，启动！
 
-![descript](others\橘子树传\20240217202255_31.png)
+![descript](/others/橘子树传/20240217202255_31.png)
 
 TIQS使用了技能：打招呼
 
@@ -140,7 +140,7 @@ TIQS使用了技能：打招呼
 
 ### 正文
 
-![descript](others\橘子树传\20240217202255_32.png)
+![descript](/others/橘子树传/20240217202255_32.png)
 
 【橘子树】新赛季福利
 
@@ -150,37 +150,37 @@ TIQS使用了技能：打招呼
 
 答：
 
-![descript](others\橘子树传\20240217202255_33.png)
+![descript](/others/橘子树传/20240217202255_33.png)
 
 【2023\.12\.17】内鬼入群\.
 
-![descript](others\橘子树传\20240217202255_34.png)
+![descript](/others/橘子树传/20240217202255_34.png)
 
 《失去信仰》原神玩多了（即答
 
-![descript](others\橘子树传\20240217202255_35.png)
+![descript](/others/橘子树传/20240217202255_35.png)
 
 站长疑惑\.png
 
-![descript](others\橘子树传\20240217202255_36.png)
+![descript](/others/橘子树传/20240217202255_36.png)
 
 盒已出
 
-![descript](others\橘子树传\20240217202255_37.png)
+![descript](/others/橘子树传/20240217202255_37.png)
 
 消失的工作室？
 
-![descript](others\橘子树传\20240217202255_38.png)
+![descript](/others/橘子树传/20240217202255_38.png)
 
-![descript](others\橘子树传\20240217202255_39.png)
+![descript](/others/橘子树传/20240217202255_39.png)
 
 典型的挂群不长眼挂在死人上面
 
-![descript](others\橘子树传\20240217202255_40.png)
+![descript](/others/橘子树传/20240217202255_40.png)
 
 白花抑郁\.png
 
-![descript](others\橘子树传\20240217202255_41.png)
+![descript](/others/橘子树传/20240217202255_41.png)
 
 资深心理咨询师判断：抑郁症 被害妄想症
 
